added chinese trnaslation other languages updated

--- a/locale/messages_cs.properties
+++ b/locale/messages_cs.properties
@@ -11,6 +11,8 @@ Button.search=Hledat
 Button.save=Uložit
 Button.scrape=Stáhni data
 Button.edit=Editovat
+Button.register=Registrovat
+Button.rename=Přejmenovat
 
 menuitem.cut=Stříh
 menuitem.copy=Kopíruj
@@ -34,7 +36,7 @@ tmm.clearurlcache=vyčisti url cache
 tmm.clearimagecache=vyčisti obrázkovou cache
 tmm.rebuildimagecache=znovu vytvoř obrázkovou cache
 tmm.cleardatabase=Iniciace databáze
-tmm.cleardatabase.hint=Pozor\: toto smaže celou databázi a založí novou. Pokračovat ?
+tmm.cleardatabase.hint=Pozor\: toto smaže celou databáz TMMi a založí novou. Pokračovat ?
 tmm.cleardatabase.info=Databáze inicializována. Restartujte prosím tinyMediaManager.
 tmm.cleardatabase.error=Při inicializaci databáze došlo k chybě. Smažte prosím soubor tmm.odb ručně.
 tmm.gotoinstalldir=Otevři tMM instalační adresář v průzkumníkovi
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Obrázky
 tmm.trailer=Trailer
 tmm.subtitles=Titulky
+tmm.update.title=zkontroluj update
+tmm.update.message=Byl nalezen nový update. Updatovat ?
+tmm.registeredto=Registrováno na\:
+tmm.registerdonator=Registrovat pro verzi dárců
+tmm.registerdonator.error=Problém s registrací vaší verze.
+tmm.registerdonator.success=Díky za registraci verze pro dárce. Restartujte prosím tMM.
+tmm.registerdonator.hint=Zde si můžete zaregistrovat verzi pro dárce. Dárcovský verze bude jako poděkování pro naše přispěvatele obsahovat speciální vlastnosti. Vyplňte prosím jméno a emailovou adresu, kterou jste použili při odeslání daru.
+tmm.registerdonator.thanks=Již máte zaregistrovanou verzi pro dárce. Znovu děkujeme za dar.
+tmm.donatorfunction.hint=Tato vlastnost je dostupná pouze pro dárce.
 
 status.activethreads=Aktivní vlákna
 status.queuesize=Fronta
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Názvy filmů jsou příliš podobné - nemohu se rozhod
 movie.scrape.toolowscore=Kriterium shody je příliš nízké (<0.75) tento výsledek nebude zohledněn.
 movie.remove=Smaž označené filmy
 movie.rename=Přejmenuj/smaž označené filmy
+movie.renamepreview=Přejmenuj/smaž označené filmy - testovací běh
+movie.renamepreview.hint=Ukaž náhled filmů k přejmenování
+movie.renamerpreview=Náhled přejmenování
 movie.updatemediainfo=Obnov informace o mediu pro označené filmy
 movie.bulkedit=Hromadná editace
 movie.bulkedit.desc=Změň žánr, tagy, sadu a příznak zhlédnutí pro označené filmy
 movie.rewritenfo=Přepiš NFO pro vybrané filmy 
 movie.clearimagecache=Vyčisti obrázkovou cache pro vybrané filmy
+movie.findmissing.all=Najdi chybějící filmy pomocí všech zdrojů dat.
+movie.findmissing=Najdi chybějící filmy.
 
 movie.export=Exportuj označené filmy
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Posunout vybrané herce nahoru
 movie.edit.moveactordown=Posunout vybrané herce dolů
 movie.edit.moveproducerup=Posunout vybranou produkci nahoru
 movie.edit.moveproducerdown=Posunout vybranou produkci dolů
-
 
 movie.inmovieset=Filmy v sadě
 movie.notinmovieset=Filmy, které nejsou v sadě
@@ -119,6 +134,11 @@ movieset.movie.remove=Odstraň označený film z Sady
 movieset.movie.moveup=Přesuň označený film nahoru
 movieset.movie.movedown=Přesuň označený film dolů
 movieset.save.desc=Ulož data o Sadě
+
+renamer.oldfolder=Staré jméno složky
+renamer.newfolder=Nové jméno složky 
+renamer.oldfiles=Stará jména souborů
+renamer.newfiles=Nová jména souborů
 
 cast.actor.add=Přidat herce
 cast.actor.remove=Odstranit vybrané herce
@@ -197,12 +217,12 @@ Feedback.send.ok=Zpětná vazba odeslána
 
 # settings menu (linebreaks with html)
 Settings.movies=Filmy
-Settings.scraper=<html><center>Filmy-<br>Stahovač</center></html>
-Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
+Settings.scraper=Stahovač
+Settings.images=Obrázky
 Settings.tvshow=Seriály
-Settings.tvshowscraper=<html><center>Seriály-<br>Stahovač</center></html>
 Settings.general=Obecné
-Settings.externaldevices=<html>Vnějšíl<br>zařízení</html>
+Settings.externaldevices=Externí zařízení
+Settings.filetypes=Typy souborů
 
 # general settings
 Settings.proxy=Nastavení proxy
@@ -221,7 +241,7 @@ Settings.languagehint=Jazyk bude změněn po restartu
 
 # image settings
 Settings.poster=Plakát a fanart
-Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
+Settings.images=Obrázky
 Settings.source=Zdroj
 Settings.fanarttv.alert=Pozor\: Fanart.tv neposkytuje plakát
 Settings.moviefilename=<jméno souboru s filmem>
@@ -251,10 +271,11 @@ Settings.scraperTreshold=Práh pro shodnost hledání
 Settings.scraperTreshold.hint=Toto ukazuje podobnost výsledků hledání  se zadaným dotazem\nAutomatický stahovač bude ignorovat výsledky hledání, které nedosáhnou na limit.\nPOZOR\: pokud nastavíš práh příliš nízko, můžeš dostat chybné výsledky hledání - falešné pozititní \!\n\n1 \= 100% to samé\n0.75 \= přednastavené\n0 \= jsou úplně odlišné
 Settings.default.autoscrape=stahuj obrázky automaticky (bez výběru)
 Settings.automaticscraper=Automatický scraper
+Settings.scraperfallback=Návrat zpátky do dalších scraperu v případě nenalezéno výsledku.
 
 # movie settings
 Settings.movie.datasource=Zdroje dat
-Settings.movie.datasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny filmy v této cestě budou odstraněny z databáze. Pokračovat ?
+Settings.movie.datasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny filmy v této cestě budou odstraněny z TMM databáze. Pokračovat ?
 Settings.movie.visiblecolumns=Viditelné sloupce
 
 Settings.datasource.folderchooser=Přidej zdroj dat
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=Zbývá dodělat
 # tv show settings
 Settings.tvshowdatasource=Zdroje dat pro seriály
 Settings.tvshowdatasource.folderchooser=přidej zdroj dat pro seriály
-Settings.tvshowdatasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny seriály a epizody v této cestě budou odstraněny z databáze. Pokračovat ?
+Settings.tvshowdatasource.remove.info=Jestliže odstaníte %s ze zdrojů dat, všechny seriály a epizody v této cestě budou odstraněny z TMM databáze. Pokračovat ?
 Settings.tvshowseasontofilename=přidej sezónu do názvu souboru
 Settings.tvshowtofilename=přidej název seriálu do názvu souboru
 Settings.tvshowepisodetofilename=přidej název epizody do názvu souboru
 Settings.tvshowseasonfoldername=název složky sezóny
 Settings.tvshowseasonhint=$1 - číslo sezony\n$2 - číslo sezony s alespoň dvěmi číslicemi
 Settings.separator=Oddělovač
+Settings.tvshow.certifactioncountry.hint=Nápověda\: v současně době nepodporuje žádný scraper certifikaci více států.\nThe TV Database vždy vrací US certifikaci.\nAniDB neposkytuje certifikaci.
 
 # tv shows
 tvshow.scrape.newitems=Stáhni data pro nové položky
@@ -324,8 +346,8 @@ tvshow.rewritenfo=Přepiš NFO pro vybrané seriály
 tvshow.rename=Přejmenuj/smaž označené seriály/epizody
 tvshow.clearimagecache=Vyčisti obrázkovou cache pro vybrané Seriály/Epizody
 tvshow.renamer.failedrename=Chyba při přejmenování epizody {} -neplatné číslo sezoný či epizody
-# tvshow.renamer.tvshowfolder=Rename TV show folder
-# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.renamer.tvshowfolder=Přejmenuj složku seriálů
+tvshow.renamer.tvshowfolder.year=Přidej rok k názvu složky seriálů
 
 tvshowepisode.scrape=Stáhni data pro epizodu
 tvshowepisode.clone=Klonuj epizodu
@@ -354,6 +376,7 @@ metatag.episodes=Epizody
 metatag.external=vnější
 metatag.filename=Jméno souboru
 metatag.files=Soubory
+metatag.format=Formát
 metatag.genre=Žánry
 metatag.guests=Hosté
 metatag.images=Obrázky
