--- a/locale/messages_de.properties
+++ b/locale/messages_de.properties
@@ -11,6 +11,8 @@ Button.search=Suchen
 Button.save=Speichern
 Button.scrape=Scrape
 Button.edit=Bearbeiten
+Button.register=Registrieren
+Button.rename=Umbenennen
 
 menuitem.cut=Ausschneiden
 menuitem.copy=Kopieren
@@ -34,7 +36,7 @@ tmm.clearurlcache=Url Cache löschen
 tmm.clearimagecache=Bilder Cache löschen
 tmm.rebuildimagecache=Bildercache neu aufbauen
 tmm.cleardatabase=Datenbank neu aufbauen
-tmm.cleardatabase.hint=Achtung\: Es wird die komplette Datenbank gelöscht und eine Leere neu angelegt. Weitermachen?
+tmm.cleardatabase.hint=Achtung\: Es wird die komplette TMM Datenbank gelöscht und eine Leere neu angelegt. Weitermachen?
 tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
 tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
 tmm.gotoinstalldir=TMM Verzeichnis im Dateibrowser öffnen
@@ -56,6 +58,15 @@ tmm.nfo=Info
 tmm.images=Bilder
 tmm.trailer=Trailer
 tmm.subtitles=Untertitel
+tmm.update.title=Überprüfe auf neue Version
+tmm.update.message=EIne neue Version wurde gefunden.\nMöchtest Du sie installieren?
+tmm.registeredto=Registirert für\:
+tmm.registerdonator=Registriere Dich als Spender
+tmm.registerdonator.error=Es gab ein Problem bei der Registrierung Deiner Version
+tmm.registerdonator.success=Danke für die Registrierung als Spender. Bitte TMM neu starten.
+tmm.registerdonator.hint=Hier kannst Du Dich für die "ich-habe-gespendet" Version registrieren. Die Spenden-Version schaltet zusätzlich Funktionalitäten frei, als "danke schön" für unsere Unterstützer. Bitte gib Deinen Namen und eMail Adresse an, die Du auch zum Spenden verwendet hast.
+tmm.registerdonator.thanks=Du hast Dich bereits für die Spenden-Version registriert. Vielen Dank für die erneute Spende\!
+tmm.donatorfunction.hint=Diese Funktionalität ist exklusiv für unsere Unterstützer, die TMM etwas gespendet haben.
 
 status.activethreads=laufende Aufgaben
 status.queuesize=Warteschlange\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Titel unterscheiden sich zuwenig - kann nicht entscheide
 movie.scrape.toolowscore=Suchergebnisbewertung war zu niedrig (<0.75), nehme Ergebnis nicht her.
 movie.remove=Ausgewählte Filme entfernen
 movie.rename=Umbenennen / Cleanup ausgewählter Filme
+movie.renamepreview=Umbenennen / Cleanup ausgewählter Filme - Vorschau
+movie.renamepreview.hint=Erzeugt eine Vorschau, wie die umbenannten Filme aussehen.
+movie.renamerpreview=Umbenennen / Cleanup Vorschau
 movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
 movie.bulkedit=Mehrfach bearbeiten
 movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
 movie.rewritenfo=NFO für ausgewählte Filme neu schreiben
 movie.clearimagecache=Den Bildercache für ausgewählte Filme löschen
+movie.findmissing.all=Finde fehlende Filme in allen Datenordnern.
+movie.findmissing=Finde fehlende Filme
 
 movie.export=Exportiere Filmliste(n) von selektierten Filmen
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=ausgewählten Darsteller nach oben verschieben
 movie.edit.moveactordown=ausgewählten Darsteller nach unten verschieben
 movie.edit.moveproducerup=ausgewählten Produzenten nach oben verschieben
 movie.edit.moveproducerdown=ausgewählten Produzenten nach unten verschieben
-
 
 movie.inmovieset=Film in Filmset
 movie.notinmovieset=Film in keinem Filmset
@@ -119,6 +134,11 @@ movieset.movie.remove=Ausgewählten Film von diesem Filmset entfernen.
 movieset.movie.moveup=Ausgewählten Film nach oben verschieben
 movieset.movie.movedown=Ausgewählten Film nach unten verschieben
 movieset.save.desc=Filmset Daten speichern
+
+renamer.oldfolder=Altes Verzeichnis
+renamer.newfolder=Neues Verzeichnis
+renamer.oldfiles=Alte Dateinamen
+renamer.newfiles=Neue Dateinamen
 
 cast.actor.add=neuen Schauspieler hinzufügen
 cast.actor.remove=ausgewählten Darsteller entfernen
@@ -197,12 +217,12 @@ Feedback.send.ok=Feedback gesendet - Danke\!
 
 # settings menu (linebreaks with html)
 Settings.movies=Filme
-Settings.scraper=<html><center>Film -<br>Scraper</center></html>
-Settings.images=<html><center>Film -<br>Bilder</center></html>
+Settings.scraper=Scraper
+Settings.images=Bilder
 Settings.tvshow=TV Shows
-Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=Allgemein
-Settings.externaldevices=<html>externe<br>Geräte</html>
+Settings.externaldevices=Externe Geräte
+Settings.filetypes=Dateitypen
 
 # general settings
 Settings.proxy=Proxy Einstellungen
@@ -221,7 +241,7 @@ Settings.languagehint=Die Sprache wird bei beim nächsten Start geändert
 
 # image settings
 Settings.poster=Poster und Fanart
-Settings.images=<html><center>Film -<br>Bilder</center></html>
+Settings.images=Bilder
 Settings.source=Datenherkunft
 Settings.fanarttv.alert=Achtung\: Fanart.tv unterstützt keine Film Poster\!
 Settings.moviefilename=<Film Dateiname>
@@ -251,10 +271,11 @@ Settings.scraperTreshold=Such-Grenzwert
 Settings.scraperTreshold.hint=Das ist der Wert, wie gut der Suchbegriff mit dem Ergebnis übereinstimmt.\n'Automtisch Scrapen' ignoriert Ergebnisse unter diesem Wert.\nACHTUNG\: ist der Wert zu niedrig, können falsche Ergebnisse genommen werden\!\n\n1 \= 100% gleich\n0.75 \= Standardwert\n0 \= komplett unterschiedlich
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
 Settings.automaticscraper=Automatisch scrapen
+Settings.scraperfallback=Automatische Suche mit anderen Scrapern wenn kein Ergebnis gefunden
 
 # movie settings
 Settings.movie.datasource=Film Verzeichnis
-Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der Datenbank entfernt. Weitermachen?
+Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der TMM Datenbank entfernt. Weitermachen?
 Settings.movie.visiblecolumns=Angezeigte Spalten
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=TV Show Ordner
 Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
-Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der Datenbank entfernt. Weitermachen?
+Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der TMM Datenbank entfernt. Weitermachen?
 Settings.tvshowseasontofilename=Saisonnummer dem Dateinamen hinzufügen
 Settings.tvshowtofilename=TvShow Name dem Dateinamen hinzufügen
 Settings.tvshowepisodetofilename=Episodentitle dem Dateinamen hinzufügen
 Settings.tvshowseasonfoldername=Saison Ordnername
 Settings.tvshowseasonhint=$1 - Saison Nummer\n$2 - Saison Nummer mit 2 Stellen
 Settings.separator=Trennzeichen
+Settings.tvshow.certifactioncountry.hint=Hinweis\: Momentan unterstützt kein Scraper anderssprachige Altersbeschränkungen.\nTVDB führt nur US Altersbeschränkungen,\nund AniDB gar keine.
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
@@ -354,6 +376,7 @@ metatag.episodes=Episoden
 metatag.external=Extern
 metatag.filename=Dateiname
 metatag.files=Dateien
+metatag.format=Format
 metatag.genre=Genre
 metatag.guests=Gastauftritt
 metatag.images=Bilder
