--- a/locale/messages_es.properties
+++ b/locale/messages_es.properties
@@ -11,6 +11,8 @@ Button.search=Buscar
 Button.save=Guardar
 Button.scrape=Raspar
 Button.edit=Editar
+# Button.register=Register
+# Button.rename=Rename
 
 menuitem.cut=Cortar
 menuitem.copy=Copiar
@@ -34,7 +36,7 @@ tmm.clearurlcache=Limpiar cache url
 tmm.clearimagecache=Limpiar cache imágenes
 tmm.rebuildimagecache=Reconstruir cache de imágenes
 tmm.cleardatabase=Limpiar base de datos
-tmm.cleardatabase.hint=ATENCIÓN\: Esto eliminará la base de datos por completo y creara una nueva. ¿Desea continuar?.
+tmm.cleardatabase.hint=ATENCIÓN\: Esto eliminará la base de datos de TMM por completo y creara una nueva. ¿Desea continuar?.
 tmm.cleardatabase.info=Base de datos borrada. A continuación tinyMediaManager se cerrara.\nVuelva abrirlo y actualicé de nuevo el origen de datos para crear una nueva base datos.
 tmm.cleardatabase.error=Se ha producido un error al crear la base de datos. Por favor, elimine el archivo 'tmm.odb' manualmente.
 tmm.gotoinstalldir=Abrir directorio de instalación de tMM
@@ -49,13 +51,22 @@ tmm.wakeonlandevice=Despertar dispositivo LAN
 tmm.wakeonlan=Despertar dispositivo LAN
 tmm.version=Versión
 tmm.builddate=Fecha de compilación
-tmm.homepage=Inicio
-tmm.thanksto=Gracias a ...
+tmm.homepage=Pagina Oficial
+tmm.thanksto=Agradecimientos a ...
 tmm.of=de
 tmm.nfo=NFO
 tmm.images=Imágenes
 tmm.trailer=Trailer
 tmm.subtitles=Subtítulos
+tmm.update.title=Comprobar actualizaciones
+tmm.update.message=Ha sido encontrada una nueva versión.\n¿Te gustaría descargarla?
+# tmm.registeredto=Registered to\:
+# tmm.registerdonator=Register for donator version
+# tmm.registerdonator.error=There was a problem registering your version
+# tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+# tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
+# tmm.donatorfunction.hint=This feature is restricted to our donators.
 
 status.activethreads=Tareas activas
 status.queuesize=Cola
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Los títulos son demasiado similares
 movie.scrape.toolowscore=La coincidencia es demasiada baja (<0,75) por lo que no hemos tenido en cuenta los resultados
 movie.remove=Borrar película seleccionada
 movie.rename=Limpiar y renombrar película seleccionada
+# movie.renamepreview=Rename/cleanup selected movie(s) - dry run
+# movie.renamepreview.hint=Create a preview, which movies have to be renamed
+# movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Actualizar información multimedía película seleccionada
 movie.bulkedit=Edición masiva
 movie.bulkedit.desc=Cambiar género, etiqueta, colección y marca de "visualizado" para toda película seleccionada
 movie.rewritenfo=Reescribir NFO para la película selecionada
 movie.clearimagecache=Limpiar cache de imágenes para película seleccionada
+# movie.findmissing.all=Find missing movies in all datasources
+# movie.findmissing=Find missing movies
 
 movie.export=Exportar película seleccionada
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Mover actor hacía arriba
 movie.edit.moveactordown=Mover actor hacía abajo
 movie.edit.moveproducerup=Mover productor hacía arriba
 movie.edit.moveproducerdown=Mover productor hacía abajo
-
 
 movie.inmovieset=Películas en una colección
 movie.notinmovieset=Películas que no están en una colección
@@ -120,14 +135,19 @@ movieset.movie.moveup=Mover película seleccionada hacía arriba
 movieset.movie.movedown=Mover película seleccionada hacía abajo
 movieset.save.desc=Guardar metadatos colección
 
+# renamer.oldfolder=Old folder name
+# renamer.newfolder=New folder name
+# renamer.oldfiles=Old file names
+# renamer.newfiles=New file names
+
 cast.actor.add=Añadir Actor
 cast.actor.remove=Borrar Actor seleccionado
 cast.actor.unknown=Actor desconocido
 cast.role.unknown=Papel desconocido
 cast.producer.add=Añadir un nuevo Productor
 cast.producer.remove=Borrar Productor seleccionado
-# producer.name.unknown=unknown producer
-# producer.role.unknown=unknown role
+producer.name.unknown=Productor desconocido
+producer.role.unknown=Papel desconocido
 
 scraper=Raspador
 scraper.metadata.select=Seleccione metadatos a raspar
@@ -197,12 +217,12 @@ Feedback.send.ok=Comentario enviado correctamente
 
 # settings menu (linebreaks with html)
 Settings.movies=Películas
-Settings.scraper=<html><center>Películas -<br>Raspador</center></html>
-Settings.images=<html><center>Películas-<br>imágenes</center></html>
+Settings.scraper=Raspador
+Settings.images=Imágenes
 Settings.tvshow=Programas TV
-Settings.tvshowscraper=<html><center>Programas TV -<br>Raspador</center></html>
 Settings.general=General
-Settings.externaldevices=<html>Dispositivos<br>Externos</html>
+Settings.externaldevices=Dispositivos externos
+# Settings.filetypes=File types
 
 # general settings
 Settings.proxy=Ajustes proxy
@@ -221,8 +241,8 @@ Settings.languagehint=Es necesario reiniciar la aplicación para aplicar el nuev
 
 # image settings
 Settings.poster=Póster y fanart
-Settings.images=<html><center>Películas-<br>imágenes</center></html>
-Settings.source=Descargar desde
+Settings.images=Imágenes
+Settings.source=Origen de datos
 Settings.fanarttv.alert=ATENCIÓN\: Fanart.tv no proporciona póster
 Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn está en desuso y se eliminará en breve
@@ -251,10 +271,11 @@ Settings.scraperTreshold=Nivel de coincidencia (%)
 Settings.scraperTreshold.hint=Este indicador sirve para indicar como de exactos quieres que sean los resultados de búsqueda\ndurante las búsquedas automáticas.\n\nAl realizar un raspado automático se ignorarán los resultados cuyo rango de coincidencia este\npor debajo del nivel de porcentaje indicado.\n\nATENCIÓN\: Si ajusta este nivel demasiado bajo se obtendrán falsos positivos.\n\n1 \= 100% coincidente\n0.75 \= Mostrara los resultados más parecidos posibles (por defecto)\n0 \= Resultados dispares
 Settings.default.autoscrape=Raspar imagenes automaticamente (sin selección)
 Settings.automaticscraper=Raspado automático
+Settings.scraperfallback=Recurrir a otros raspadores cuando no se consiga resultado en la búsqueda
 
 # movie settings
 Settings.movie.datasource=Origen de datos
-Settings.movie.datasource.remove.info=Si borras "%s" como ruta de origen de datos todas las películas\nque procedan de ella serán borradas de la base de datos.\n\n¿Seguro que deseas continuar?
+Settings.movie.datasource.remove.info=Si borras %s de entre tus recursos, todas las películas que este contenga serán borradas de la base de datos de TMM.\n¿Deseas continuar?
 Settings.movie.visiblecolumns=Columnas visibles
 
 Settings.datasource.folderchooser=Añadir origen de datos
@@ -283,7 +304,7 @@ Settings.imagecacheimporthint=ATENCIÓN\: Esto puede demorarse un tiempo. Sólo 
 Settings.devicename=Nombre del dispositivo
 Settings.macaddress=Dirección MAC
 Settings.movie.badwords=Palabras malsonantes
-Settings.movie.badwords.hint=Palabras malsonantes, que serán borradas del\nnombre de película
+Settings.movie.badwords.hint=Palabras malsonantes que serán borradas del\nnombre de la película
 Settings.runtimefrommediafile=Prefiero el tiempo de ejecución de MediaInfo
 
 Settings.movie.renamer.info=Modificadores disponibles\:\n$T \= Título\n$O \= Título Original\n$1 \= Primera letra título\n$E \= Ordenar Título\n$2 \= Primera letra ordenar título\n$Y \= Año\n$M \= Título colección (ordenar título)\n$N \= Título colección\n$I \= Número IMDB\n$C \= Calificación edades\n$R \= Resolución Vídeo\n$A \= Codec audio + número canales\n$V \= Codec vídeo + formato\n$F \= Formato vídeo\n\n{} \= opción por defecto\n ej\: {Año $Y} -> "Año 2013" Si $Y no existe\n Si $Y no existe (or no $x replacement inside)\n la cadena esta vacía
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=Origen de datos para programas TV
 Settings.tvshowdatasource.folderchooser=Añadir origen de datos programas TV
-Settings.tvshowdatasource.remove.info=Si borras "%s" como ruta de origen de datos todos\nlos programas de TV y episodios que procedan\nde ella serán borrados de la base de datos.\n\n¿Seguro que deseas continuar?
+Settings.tvshowdatasource.remove.info=Si borras %s de entre tus recursos, todos los programas de TV que contenga serán borrados de la base de datos de TMM.\n¿Deseas continuar?
 Settings.tvshowseasontofilename=Añadir temporada al nombre del archivo
 Settings.tvshowtofilename=Añadir nombre del programa TV al nombre del archivo
 Settings.tvshowepisodetofilename=Añadir título del episodio al nombre del archivo
 Settings.tvshowseasonfoldername=Nombre de carpeta para temporadas
 Settings.tvshowseasonhint=$1 - Número de temporada\n$2 - Número de temporada con al menos dos digitos
 Settings.separator=Separador
+Settings.tvshow.certifactioncountry.hint=Nota\: Por el momento ninguno de los raspadores soporta calificación por edades para diferentes países.\nLa base de datos para programas de TV siempre devolverá los valores para USA.\nAniDB no soporta calificación por edades.\n
 
 # tv shows
 tvshow.scrape.newitems=Raspar nuevos campos
@@ -324,8 +346,8 @@ tvshow.rewritenfo=Reescribir NFO para programa TV seleccionado
 tvshow.rename=Limpiar y renombrar programa TV/ episodio seleccionado
 tvshow.clearimagecache=Limpiar cache de imágenes para programa TV/ episodio seleccionado
 tvshow.renamer.failedrename=Hubo un error no se pudo renombrar el episodio {} - número de temporada o episodio no validos
-# tvshow.renamer.tvshowfolder=Rename TV show folder
-# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.renamer.tvshowfolder=Renombrar carpeta Programa TV
+tvshow.renamer.tvshowfolder.year=Añadir año a la carpeta Programa TV
 
 tvshowepisode.scrape=Raspar metadatos episodio
 tvshowepisode.clone=Clonar episodio
@@ -354,6 +376,7 @@ metatag.episodes=Episodios
 metatag.external=Externo
 metatag.filename=Nombre del archivo
 metatag.files=Archivos
+metatag.format=Formato
 metatag.genre=Género
 metatag.guests=Artistas invitados 
 metatag.images=Imágenes
@@ -369,7 +392,7 @@ metatag.notwatched=No visualizado
 metatag.originaltitle=Título original
 metatag.path=Ruta
 metatag.plot=Argumento
-metatag.production=Productora
+metatag.production=Estudio
 metatag.producers=Productores
 metatag.premiered=Estrenado
 metatag.quality=Calidad
