--- a/locale/messages_fr.properties
+++ b/locale/messages_fr.properties
@@ -11,6 +11,8 @@ Button.search=Rechercher
 Button.save=Sauvegarder
 Button.scrape=Scrape
 Button.edit=Editer
+Button.register=S'enregister
+Button.rename=Renommer
 
 menuitem.cut=Couper
 menuitem.copy=Copier
@@ -34,7 +36,7 @@ tmm.clearurlcache=vider le cache url
 tmm.clearimagecache=vider le cache image
 tmm.rebuildimagecache=reconstruire le cache image
 tmm.cleardatabase=Initialiser la base de données
-# tmm.cleardatabase.hint=Be careful\: this will remove the complete database to start with a new one. Proceed?
+tmm.cleardatabase.hint=Faites attention \: Cela supprimera la base de données actuelles pour en mettre une vierge. Exécuter quand même ?
 tmm.cleardatabase.info=Base de données initialisées. Merci de redémarrer tinyMediaManager
 tmm.cleardatabase.error=Une erreur est survenue durant l'initialisation de la base de données. Merci de supprimer le fichier tmm.odb manuellement
 tmm.gotoinstalldir=Ouvrir le répertoire d'installation de tMM dans l'explorateur de fichier
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Images
 tmm.trailer=Bande-annonce
 tmm.subtitles=Sous-Titres
+tmm.update.title=Vérifier les mises à jours disponibles
+tmm.update.message=Une nouvelle mise à jour a été trouvée.\nVoulez-vous mettre à jour ?
+tmm.registeredto=Enregistré à \: 
+tmm.registerdonator=S'enregistrer pour la version avec donation
+tmm.registerdonator.error=Nous avons rencontré un problème en enregistrant votre version
+tmm.registerdonator.success=Merci de vous être enregistré avec la version pour les donateurs. Redémarrer le logiciel.
+tmm.registerdonator.hint=Vous pouvez enregistrer ici la version avec donation. Cette version aura des fonctionnalités particulières comme la fonction "Merci" pour nos donateurs. Merci de renseigner le nom et l'adresse email utilisé pour le don.
+tmm.registerdonator.thanks=Vous avez déjà enregistrer la version avec donation. Merci encore pour votre don \!
+tmm.donatorfunction.hint=Cette fonction n'est accessible qu'avec la version pour les Donateurs
 
 status.activethreads=Opérations actives
 status.queuesize=File d'attente\:
@@ -64,8 +75,8 @@ status.queuesize=File d'attente\:
 onlyoneoperation=Une seule opération à la fois est autorisée
 update.datasource=Mettre à jour les sources
 update.datasource.unavailable=Source {} {} non disponible - saut
-# update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully\!)
-# update.datasource.episodeinroot=Found file '{}' in the root directory of the data source. To get this imported, move it to its own directory\!
+update.datasource.movieinroot=Nous avons trouvé '{}' dans un répertoire contenent plusieurs films au lieu d'un. Pour valider l'importation, merci d'activer l'option ' Autoriser plusieurs films par répertoire' dans les paramètres FILMS ( à lire attentivement)
+update.datasource.episodeinroot=Nous avons trouvé le fichier '{}' dans le répertoire racine d'où proviennent les données. Pour l'importer, déplacer le dans son propre répertoire\!
 export.detail=Le modèle contient des pages détaillés
 export.setdestination=Choisir la destination pour l'exportation
 export.selectdirectory=Sélectionnez le répertoire d'exportation
@@ -80,15 +91,20 @@ movie.scrape.unscraped.desc=Rechercher & scraper tous les films non scrapés - s
 movie.scrape.metadata=Scraper les métadonnées pour les films sélectionnés
 movie.scrape.metadata.desc=Scraper les métadonnées pour les films sélectionnés
 movie.scrape.nomatchfound=Aucun titre de film concordant n'a été trouvé pendant la recherche
-# movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
-# movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
+movie.scrape.toosimilar=Les noms de films sont trop semblables - nous ne pouvons pas sélectionner le bon automatiquement. 
+movie.scrape.toolowscore=Le score de rapprochement est trop faible (<0.75), nous ne pouvons pas en tenir compte. 
 movie.remove=Supprimer le(s) film(s) sélectionné(s)
 movie.rename=Renommer/nettoyer le(s) film(s) sélectionné(s)
+movie.renamepreview=Renommer/Nettoyer les films sélectionnés - allez 
+movie.renamepreview.hint=Créer un prévisualisation des films devant être renommés
+movie.renamerpreview=Prévisualisation du renommage
 movie.updatemediainfo=Mise à jour des informations de(s) film(s) sélectionné(s)
 movie.bulkedit=Édition rapide
 movie.bulkedit.desc=Changer le genre, étiquettes, saga et marque "vu" pour tous les films sélectionnés
 movie.rewritenfo=Réécriture des NFO pour le(s) film(s) sélectionné(s)
-# movie.clearimagecache=Clear image cache for selected movie(s)
+movie.clearimagecache=Supprimer le cache image pour le ou les film(s) sélectionné(s)
+movie.findmissing.all=Trouver les films manquant dans toutes les sources de données
+movie.findmissing=Trouver les films manquants
 
 movie.export=Exporter le(s) film(s) sélectionné(s)
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Monter l'acteur sélectionné
 movie.edit.moveactordown=Descendre l'acteur sélectionné
 movie.edit.moveproducerup=Monter le producteur sélectionné
 movie.edit.moveproducerdown=Descendre le producteur sélectionné
-
 
 movie.inmovieset=Les films classés dans une saga
 movie.notinmovieset=Films absents d'une saga
@@ -120,14 +135,19 @@ movieset.movie.moveup=Monter le film sélectionné
 movieset.movie.movedown=Descendre le film sélectionné
 movieset.save.desc=Sauvegarder les métadonnées de la saga
 
+renamer.oldfolder=Ancien nom de dossier
+renamer.newfolder=Nouveau nom de dossier
+renamer.oldfiles=Ancien nom de fichiers
+renamer.newfiles=Nouveaux nom nom de fichiers
+
 cast.actor.add=Ajouter un nouvel acteur
 cast.actor.remove=Enlever l'acteur sélectionné
 cast.actor.unknown=Acteur inconnu
 cast.role.unknown=Rôle inconnu
 cast.producer.add=Ajouter un nouveau producteur
 cast.producer.remove=Enlever le producteur sélectionné
-# producer.name.unknown=unknown producer
-# producer.role.unknown=unknown role
+producer.name.unknown=Producteur inconnu
+producer.role.unknown=Rôle inconnu
 
 scraper=Scraper
 scraper.metadata.select=Sélectionner les métadonnées devant être scrapées
@@ -197,12 +217,12 @@ Feedback.send.ok=Retour/appréciation envoyé
 
 # settings menu (linebreaks with html)
 Settings.movies=Films
-Settings.scraper=<html><center>Films -<br>Scraper</center></html>
-Settings.images=<html><center>Films -<br>Illustrations</center></html>
-Settings.tvshow=Séries
-Settings.tvshowscraper=<html><center>Séries -<br>Scraper</center></html>
+Settings.scraper=Scraper
+Settings.images=images
+Settings.tvshow=Séries TV
 Settings.general=Général
-Settings.externaldevices=<html>Appareil<br>distant</html>
+Settings.externaldevices=Matériels Externes
+Settings.filetypes=Types de fichiers
 
 # general settings
 Settings.proxy=Paramètres du proxy
@@ -221,7 +241,7 @@ Settings.languagehint=La langue va être changée après redémarrage \!
 
 # image settings
 Settings.poster=Poster et Affiche
-Settings.images=<html><center>Films -<br>Illustrations</center></html>
+Settings.images=images
 Settings.source=Source
 Settings.fanarttv.alert=Attention \: Fanart.tv ne fournit pas d'affiche
 Settings.moviefilename=<nom de fichier du film>
@@ -247,21 +267,22 @@ Settings.image.large=Large
 Settings.getfromTMDB=Intrigue/Titre/Synopsis partir de TMDB
 Settings.preferredLanguage=Langue préférée
 Settings.certificationCountry=Pays de certification
-# Settings.scraperTreshold=Score threshold
+Settings.scraperTreshold=Valeur du seuil
 # Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
 Settings.default.autoscrape=Scrape automatique des illustrations (sans sélection)
 Settings.automaticscraper=Scraper automatiquement
+Settings.scraperfallback=Analyse d'autre source de données (Scraper) quand nous n'obtenons pas de résultat de recherche
 
 # movie settings
 Settings.movie.datasource=Sources des données
-Settings.movie.datasource.remove.info=Si vous enlevez %s de vos sources, tous les films correspondant à ce chemin seront enlevés de la base de donnés. Continuer ?
+Settings.movie.datasource.remove.info=Si vous enlever %s de vos sources, tous les films correspondant à ce chemin seront enlevés de la base de donnés. Voulez-vous continuer ?
 Settings.movie.visiblecolumns=Colonne visible
 
 Settings.datasource.folderchooser=Ajouter une source de données
 Settings.datasource.remove=Supprimer la source de données
 
 Settings.multipleMovies=Autoriser plusieurs films par répertoire
-# Settings.multipleMovies.hint=BE AWARE\: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects\: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nUSING MULTIPLE MOVIES PER FOLDER IS NOT RECOMMENDED\!
+Settings.multipleMovies.hint=Attention \: cette option vous autorisera à importer plusieurs films par dossier.\nActiver cette option induira les effets secondaires suivants \: vous ne serez plus en mesure de \:\nChoisir votre propre renommage de fichier ou utiliser des fanarts et miniatures supplémentaires.\nRANGER PLUSIEURS FILMS PAR RÉPERTOIRE EST FORTEMENT DÉCONSEILLÉ\n
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
 Settings.videofiletypes=Types de fichiers vidéos
@@ -276,14 +297,14 @@ Settings.renamer.asciireplacement=Remplacer les caractères non ASCII avec leur 
 Settings.renamer.asciireplacement.hint=Exemples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 Settings.cleanupoptions=Options de nettoyage
 Settings.renamer.removenfo=Enlever tous les autres NFOs
-# Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
+Settings.renamer.moviesetsinglemovie=Cela crée également un dossier pour chaque film
 Settings.example=Exemple
-# Settings.imagecacheimport=Build image cache on import
-# Settings.imagecacheimporthint=Attention\: this may take a while. Works only if the image cache is enabled
+Settings.imagecacheimport=Création du cache contenant les images pendant l'import.
+Settings.imagecacheimporthint=Attention \: ce traitement peut être long et ne fonctionne que si le 'cache image' est activé.
 Settings.devicename=Nom de l'appareil
 Settings.macaddress=Adresse MAC
 Settings.movie.badwords=Gros mots
-# Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
+Settings.movie.badwords.hint=Mots interdits qui seront retirés de↩\nnom du film détecté
 Settings.runtimefrommediafile=Préférer la durée détectée par MediaInfo
 
 # Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$C \= Certification\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format\r\n$F \= video format\r\n\r\n{} \= optional replacement\r\n eg\: {Year $Y} -> "Year 2013" if $Y is not empty\r\n if $Y is empty (or no $x replacement inside)\r\n the complete tag is empty
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=à faire
 # tv show settings
 Settings.tvshowdatasource=Chemin des fichiers Série
 Settings.tvshowdatasource.folderchooser=Ajouter un chemin pour les fichiers Série
-Settings.tvshowdatasource.remove.info=Si vous enlevez %s de vos sources, toutes les séries correspondant à ce chemin seront enlevées de la base de donnés. Continuer ?
+Settings.tvshowdatasource.remove.info=Si vous enlevez %s de vos sources, toutes les séries TV correspondantes à ce chemin seront enlevées de la base de donnés. Voulez-vous continuer ?
 Settings.tvshowseasontofilename=Mettre la saison comme nom de fichier
 Settings.tvshowtofilename=Mettre le nom de la série comme nom de fichier
 Settings.tvshowepisodetofilename=Mettre le titre de l'épisode comme nom de fichier
 Settings.tvshowseasonfoldername=Nom du dossier de saison
 Settings.tvshowseasonhint=$1 - Numéro de saison\n$2 - Numéro de saison à au moins  2 nombres
 Settings.separator=Séparateur
+# Settings.tvshow.certifactioncountry.hint=Hint\: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications
 
 # tv shows
 tvshow.scrape.newitems=Scraper des nouveautés
@@ -323,9 +345,9 @@ tvshow.update=Mettre à jour la (les) série(s)
 tvshow.rewritenfo=Réécriture des NFO pour les séries sélectionées
 tvshow.rename=Renommer/nettoyer la(les) série(s) sélectionnée(s)
 tvshow.clearimagecache=Effacer le cache image pour la (les) série(s)/épisode(s) sélectionné(s)
-# tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
-# tvshow.renamer.tvshowfolder=Rename TV show folder
-# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.renamer.failedrename=Échec de renommage de l'épisode {} - Numéro d'épisode ou de saison invalide.
+tvshow.renamer.tvshowfolder=Renommage du dossier de la Série TV
+tvshow.renamer.tvshowfolder.year=Rajouter l'année au répertoire de la série TV
 
 tvshowepisode.scrape=Scraper les métadonnées de l'épisode
 tvshowepisode.clone=Cloner l'épisode
@@ -354,6 +376,7 @@ metatag.episodes=Épisodes
 metatag.external=externe
 metatag.filename=Nom du fichier
 metatag.files=Fichiers
+metatag.format=Format
 metatag.genre=Genres
 metatag.guests=Invités
 metatag.images=Images
@@ -454,21 +477,21 @@ movieextendedsearch.newepisodes=Nouveaux épisodes
 
 logwindow.title=Logs d'erreur
 summarywindow.title=Résumé
-# whatsnew.title=What's new
-# whatsnew.hint=For more information visit
+whatsnew.title=Quels sont les nouveautés ?
+whatsnew.hint=Pour plus d'information, merci de visiter
 
 message.nfo.writeerror=Erreur lors de l'écriture des NFO {} {}
 message.nfo.readerror=Erreur lors de la lecture des NFO
 
 message.extraimage.threadcrashed=Echec du téléchargement des images suplémentaires{} {}
 
-# message.mediainfo.threadcrashed=Getting media info failed{} {}
+message.mediainfo.threadcrashed=Échec de récupération des données médias{} {}
 
 message.renamer.threadcrashed=Erreur lors du renommage {} {}
 message.renamer.failedrename=Renommage de {} {}échoué
 
 message.scrape.metadatamoviefailed=Échec d'attribution des méta-datas pour le film
-# message.scrape.metadatatvshowfailed=Failed to set metadata for tv show
+message.scrape.metadatatvshowfailed=Échec d'attribution des métas-datas pour cette série
 message.scrape.movieartworkfailed=Pas d'illustrations trouvées pour ce film
 message.scrape.tvshowartworkfailed=Pas d'illustrations trouvées pour cette série
 message.scrape.movietrailerfailed=Pas de bande annonce trouvé pour ce film
@@ -478,7 +501,7 @@ message.scrape.tvshowepisodefailed=Impossible de trouver les donnés de l'épiso
 message.artwork.threadcrashed=Echec du téléchargement des illustrations{} {}
 
 message.update.threadcrashed=Échec de la mis à jour des sources{} {} 
-# message.update.errormoviedir=Failed parsing movie directory{} {}
+message.update.errormoviedir=Échec de l'analyse et du traitement du répertoire FILM{} {}
 
 message.database.loadmovies=Impossible de charger un film de la base de données
 message.database.loadtvshows=Impossible de chargé les séries depuis la base de données
@@ -492,10 +515,10 @@ message.erroropenfolder=Impossible d'ouvrir le répertoire {} {}
 message.erroropenurl=Impossible d'ouvrir l'URL {} {}
 
 message.missingitems=Merci de remplir tous les champs requis
-# message.invalidmac=Invalid MAC address. It has to be in the following format\: AA\:BB\:CC\:DD\:EE\:FF
+message.invalidmac=Adresse 'MAC' invalide. Elle doit respecter le format suivant \: AA\:BB\:CC\:DD\:EE\:FF
 
-# tree.collapseall=Collapse all nodes
-# tree.expandall=Expand all nodes
+tree.collapseall=Réduction des noeuds
+tree.expandall=Développement de tous les noeuds
 
 ########################
 # All our genres
