--- a/locale/messages_it.properties
+++ b/locale/messages_it.properties
@@ -11,6 +11,8 @@ Button.search=Cerca
 Button.save=Salva
 Button.scrape=Raschia
 Button.edit=Modifica
+# Button.register=Register
+# Button.rename=Rename
 
 menuitem.cut=Taglia
 menuitem.copy=Copia
@@ -34,7 +36,7 @@ tmm.clearurlcache=pulisci la cache url
 tmm.clearimagecache=pulisci la cache immagine
 tmm.rebuildimagecache=ricrea la cache dell'imagine
 tmm.cleardatabase=Inizializza database
-tmm.cleardatabase.hint=Attento\: questo eliminerà tutto il database per cominciarne uno nuovo. Procedo?
+# tmm.cleardatabase.hint=Be careful\: this will remove the complete tMM database to start with a new one. Proceed?
 tmm.cleardatabase.info=Database inizializzato. Riavvia 
 tmm.cleardatabase.error=C'è stato un errore nell'inizializzazione del database. Cancella il file tmm.odb manualmente
 tmm.gotoinstalldir=Apri la cartella d'installazione di tMM in esplora risorse
@@ -56,6 +58,15 @@ tmm.wakeonlandevice=Dispositivo Risveglio da Rete
 # tmm.images=Images
 # tmm.trailer=Trailer
 # tmm.subtitles=Subtitles
+# tmm.update.title=check for update
+# tmm.update.message=A new update has been found.\nDo you want to update?
+# tmm.registeredto=Registered to\:
+# tmm.registerdonator=Register for donator version
+# tmm.registerdonator.error=There was a problem registering your version
+# tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+# tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
+# tmm.donatorfunction.hint=This feature is restricted to our donators.
 
 status.activethreads=processi attivi
 status.queuesize=Coda\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=I titoli dei Film sono troppo simili - non so decidere q
 movie.scrape.toolowscore=La corrispondenza era troppo bassa (<0,75) e quindi non prendiamo questo risultato
 movie.remove=Rimuovi i Film selezionati
 movie.rename=Rinomina/pulisci i Film selezionati
+# movie.renamepreview=Rename/cleanup selected movie(s) - dry run
+# movie.renamepreview.hint=Create a preview, which movies have to be renamed
+# movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Aggiorna le informazioni per i Film Selezionati
 movie.bulkedit=Modifica massiva
 movie.bulkedit.desc=Cambia genere, etichette, raccolte, e visti/non visti per tutti i Film selezionati
 movie.rewritenfo=Riscrivi NFO per il Film selezionato
 movie.clearimagecache=Pulisci la cache immagine per il Film selezionato
+# movie.findmissing.all=Find missing movies in all datasources
+# movie.findmissing=Find missing movies
 
 movie.export=Esporta i Film selezionati
 
@@ -98,7 +114,6 @@ movie.edit.abortqueue.desc=Termina la modifica di tutti i Film selezionati
 # movie.edit.moveactordown=Move selected actor down
 # movie.edit.moveproducerup=Move selected producer up
 # movie.edit.moveproducerdown=Move selected producer down
-
 
 movie.inmovieset=Film in una raccolta
 movie.notinmovieset=Film non in una raccolta
@@ -119,6 +134,11 @@ movieset.movie.remove=Rimuovi i Film selezionati dalla raccolta
 movieset.movie.moveup=Sposta il film segnato in alto
 movieset.movie.movedown=Sposta il Film segnato in basso
 movieset.save.desc=Salva i metadata della raccolta
+
+# renamer.oldfolder=Old folder name
+# renamer.newfolder=New folder name
+# renamer.oldfiles=Old file names
+# renamer.newfiles=New file names
 
 cast.actor.add=Aggiungi un nuovo Attore
 # cast.actor.remove=Remove selected Actor
@@ -197,12 +217,12 @@ Feedback.send.ok=Feedback inviato
 
 # settings menu (linebreaks with html)
 Settings.movies=Film
-Settings.scraper=<html><center>Film-<br>Raschiatore</center></html>
-Settings.images=<html><center>Film-<br>Immagini</center></html>
-Settings.tvshow=Serie TV
-Settings.tvshowscraper=<html><center>Serie Tv-<br>Raschiatore</center></html>
+# Settings.scraper=Scraper
+# Settings.images=Images
+# Settings.tvshow=TV Shows
 Settings.general=Generale
-Settings.externaldevices=<html>Esterno<br>dispositivo</html>
+# Settings.externaldevices=External devices
+# Settings.filetypes=File types
 
 # general settings
 Settings.proxy=Impostazione proxy
@@ -221,7 +241,7 @@ Settings.languagehint=La lingua cambierà al riavvio\!
 
 # image settings
 Settings.poster=Poster e Fanart
-Settings.images=<html><center>Film-<br>Immagini</center></html>
+# Settings.images=Images
 Settings.source=Sorgente
 Settings.fanarttv.alert=Attenzione\: Fanart.tv non fornisce poster
 Settings.moviefilename=<nome del file del film>
@@ -251,10 +271,11 @@ Settings.scraperTreshold=soglia punteggio
 # Settings.scraperTreshold.hint=This is an indicator of how similar the search query and the results are.\r\nThe automatic scraper will ignore search result scores below the threshold.\r\nBE AWARE\: setting the threshold too low will result in false positives\!\r\n\r\n1 \= 100% the same\r\n0.75 \= default\r\n0 \= they are completely different
 Settings.default.autoscrape=Raschia automaticamente le immagini (senza selezione)
 # Settings.automaticscraper=Automatic scraper
+# Settings.scraperfallback=Fall back to other scrapers when getting no search result
 
 # movie settings
 Settings.movie.datasource=Fonte dati
-Settings.movie.datasource.remove.info=Se elimini %s dalle tue fonti, tutti i Film all'interno della path saranno rimossi dal database. Continuo?
+# Settings.movie.datasource.remove.info=If you remove %s from your datasources, all movies inside this path will be removed from the TMM database. Continue?
 # Settings.movie.visiblecolumns=Visible columns
 
 Settings.datasource.folderchooser=Aggiungi fonte dei dati
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=Da Fare
 # tv show settings
 Settings.tvshowdatasource=aggiungi fonte dati per Serie Tv
 Settings.tvshowdatasource.folderchooser=aggiungi fonte dati per Serie Tv
-Settings.tvshowdatasource.remove.info=Se elimini %s dalle tue fonti, tutti le Serie Tv all'interno della path saranno rimossi dal database. Continuo?
+# Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the TMM database. Continue?
 Settings.tvshowseasontofilename=aggiungi stagione al nome del file
 Settings.tvshowtofilename=Aggiungi Serie Tv al nome del file
 Settings.tvshowepisodetofilename=aggiungi il titolo dell'episodio al nome del file
 Settings.tvshowseasonfoldername=nome della cartella della stagione
 # Settings.tvshowseasonhint=$1 - Season number\n$2 - Season number with at least 2 digits
 # Settings.separator=Separator
+# Settings.tvshow.certifactioncountry.hint=Hint\: at the moment none of the scraper supports certifications from different countries. \r\nThe TV Database will always return US certifications\r\nAniDB does not provide certifications
 
 # tv shows
 tvshow.scrape.newitems=Raschia elementi nuovi
@@ -354,6 +376,7 @@ metatag.episodes=Episodi
 metatag.external=esterno
 metatag.filename=Nome del file
 metatag.files=File
+# metatag.format=Format
 metatag.genre=Generi
 metatag.guests=Ospiti
 metatag.images=Immagini
