--- a/locale/messages_nl.properties
+++ b/locale/messages_nl.properties
@@ -11,6 +11,8 @@ Button.search=Zoeken
 Button.save=Opslaan
 Button.scrape=Scrape
 Button.edit=Bewerk
+Button.register=Registreer
+Button.rename=Hernoem
 
 menuitem.cut=Cut
 menuitem.copy=Kopieer
@@ -34,7 +36,7 @@ tmm.clearurlcache=Wis url cache
 tmm.clearimagecache=wis afbeelding cache
 tmm.rebuildimagecache=Hercreëer afbeelding cache
 tmm.cleardatabase=Database initialiseren
-tmm.cleardatabase.hint=Voorzichtig\: Dit zal de gehele database verwijderen om met een nieuwe te beginnen. Doorgaan?
+tmm.cleardatabase.hint=Voorzichtig\: dit zal uw complete tMM database verwijderen en met een nieuwe starten. Doorgaan?
 tmm.cleardatabase.info=Database geïnitialiseerd. Herstart tinyMediaManager.
 tmm.cleardatabase.error=Database initialisatie veroorzaakte een fout. Verwijder bestand tmm.odb handmatig
 tmm.gotoinstalldir=Open tMM installatie map in verkenner
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Afbeeldingen
 tmm.trailer=Trailer
 tmm.subtitles=Ondertitels
+tmm.update.title=check voor update
+tmm.update.message=Er is een nieuwe update gevonden.\nWil je updaten?
+tmm.registeredto=Geregistreerd voor\:
+tmm.registerdonator=Registreer voor de donateur versie
+tmm.registerdonator.error=Er is een probleem met het registreren van uw versie
+tmm.registerdonator.success=Bedankt voor het registreren voor de donateur versie. Herstart tMM a.u.b.
+tmm.registerdonator.hint=Registreer hier voor de donateur versie. Deze versie heeft speciale functies als dank voor uw steun aan tMM. Vul dezelfde naam en email adres in als bij het doneren.
+tmm.registerdonator.thanks=U heeft al geregistreerd voor de donateur versie. Nogmaals bedankt voor het doneren.
+tmm.donatorfunction.hint=Deze functie is exclusief voor donateurs.
 
 status.activethreads=actieve processen
 status.queuesize=Wachtlijst\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Film titels lijken teveel op elkaar - Kan niet beslissen
 movie.scrape.toolowscore=Gelijkenis score was te laag (<0.75) dus dit resultaat wordt niet gebruikt
 movie.remove=Verwijder geselecteerde film(s)
 movie.rename=Geselecteerde film(s) hernoemen/opschonen 
+movie.renamepreview=Hernoemen/opruimen geselecteerde film(s) - test
+movie.renamepreview.hint=Creeër een voorbeeld van de films die hernoemd moeten worden
+movie.renamerpreview=Hernoemer voorbeeld
 movie.updatemediainfo=Media informatie van geselecteerde film(s) bijwerken
 movie.bulkedit=Bulk bewerken
 movie.bulkedit.desc=Wijzig genres, tags, filmset en bekeken indicator voor geselecteerde films
 movie.rewritenfo=Herschrijf NFO voor geselecteerde film(s)
 movie.clearimagecache=Wis afbeelding cache voor geselecteerde film(s)
+movie.findmissing.all=Zoek naar missende films in al uw databronnen
+movie.findmissing=Zoek missende films
 
 movie.export=Geselecteerde film(s) exporteren
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Geselecteerde acteur omhoog
 movie.edit.moveactordown=Geselecteerde acteur omlaag
 movie.edit.moveproducerup=Geselecteerde producent omhoog
 movie.edit.moveproducerdown=Geselecteerde producent omlaag
-
 
 movie.inmovieset=Films in een filmset
 movie.notinmovieset=Films niet in een filmset
@@ -119,6 +134,11 @@ movieset.movie.remove=Geselecteerd film uit filmset verwijderen
 movieset.movie.moveup=Gemarkeerde film omhoog
 movieset.movie.movedown=Gemarkeerde film omlaag
 movieset.save.desc=Filmset metadata opslaan
+
+renamer.oldfolder=Oude map naam
+renamer.newfolder=Nieuwe map naam
+renamer.oldfiles=Oude bestand naam
+renamer.newfiles=Nieuwe bestand namen
 
 cast.actor.add=Nieuwe acteur toevoegen
 cast.actor.remove=Verwijder geselecteerde Acteur
@@ -197,12 +217,12 @@ Feedback.send.ok=Feedback verzonden
 
 # settings menu (linebreaks with html)
 Settings.movies=Films
-Settings.scraper=<html><center>Film -<br>Scraper</center></html>
-Settings.images=<html><center>Film -<br>Afbeeldingen</center></html>
-Settings.tvshow=TV Shows
-Settings.tvshowscraper=<html><center>Tv Show -<br>Scraper</center></html>
+Settings.scraper=Scraper
+Settings.images=Afbeeldingen
+Settings.tvshow=TV shows
 Settings.general=Algemeen
-Settings.externaldevices=<html>Externe<br>apparaten</html>
+Settings.externaldevices=Externe apparaten
+Settings.filetypes=Bestand types
 
 # general settings
 Settings.proxy=Proxy instellingen
@@ -221,7 +241,7 @@ Settings.languagehint=De taal zal veranderen na herstart
 
 # image settings
 Settings.poster=Poster en Fanart
-Settings.images=<html><center>Film -<br>Afbeeldingen</center></html>
+Settings.images=Afbeeldingen
 Settings.source=Bron
 Settings.fanarttv.alert=Attentie\: Fanart.tv verstrekt geen poster
 Settings.moviefilename=<film bestandsnaam>
@@ -251,10 +271,11 @@ Settings.scraperTreshold=Waardering drempel
 Settings.scraperTreshold.hint=Dit is een indicator hoe gelijkend de zoek vraag en resulaten zijn.\nDe automatische scraper negeerd resultaten die onder de drempel vallen.\nOPGELET\: Een te lage waarde zal resulteren in foutieve resultaten\!\n\n1 \= 100% gelijkend\n0.75 \= Standaard\n0 \= Ze zijn totaal verschillend
 Settings.default.autoscrape=Afbeeldingen automatisch scrapen (zonder selectie)
 Settings.automaticscraper=Automatische scraper
+Settings.scraperfallback=Gebruik alternatieve scrapers als er geen zoek resultaten zijn
 
 # movie settings
 Settings.movie.datasource=Databronnen
-Settings.movie.datasource.remove.info=Als je %s van de databronnen verwijderd worden alle films binnen dit pad uit de database verwijderd. Doorgaan?
+Settings.movie.datasource.remove.info=Als je %s uit de databronnen verwijderd zullen alle films binnen dit pad verwijderd worden uit de TMM database. Doorgaan?
 Settings.movie.visiblecolumns=Zichtbare kolommen
 
 Settings.datasource.folderchooser=Bron toevoegen
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=Te doen
 # tv show settings
 Settings.tvshowdatasource=TV show databronnen
 Settings.tvshowdatasource.folderchooser=TV show databron toevoegen
-Settings.tvshowdatasource.remove.info=Als je %s van de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
+Settings.tvshowdatasource.remove.info=Als je %s uit de databronnen verwijderd worden alle TV Series en afleveringen binnen dit pad uit de database verwijderd. Doorgaan?
 Settings.tvshowseasontofilename=Voeg seizoen aan bestandsnaam toe
 Settings.tvshowtofilename=voeg TV serie naam aan bestandsnaam toe
 Settings.tvshowepisodetofilename=voeg aflevering titel toe aan bestandsnaam
 Settings.tvshowseasonfoldername=seizoen map naam
 Settings.tvshowseasonhint=$1 - Seizoen nummer\n$2 - Seizoen nummer met minstens 2 cijfers
 Settings.separator=Seperator
+Settings.tvshow.certifactioncountry.hint=Tip\: Momenteel ondersteund geen enkele scraper certificaties uit verschillende landen. \nDe TV Database zal altijd US certificaties opleveren.\nAniDB biedt geen certificaties
 
 # tv shows
 tvshow.scrape.newitems=Scrape nieuwe onderdelen
@@ -354,6 +376,7 @@ metatag.episodes=Afleveringen
 metatag.external=extern
 metatag.filename=Bestandsnaam
 metatag.files=Bestanden
+metatag.format=Format
 metatag.genre=Genres
 metatag.guests=Gasten
 metatag.images=Afbeeldingen
@@ -507,7 +530,7 @@ Genres.ADVENTURE = Avontuur
 Genres.ANIMATION = Animatie
 Genres.ANIMAL = Dieren
 Genres.BIOGRAPHY = Biografie
-Genres.COMEDY = Comedie
+Genres.COMEDY = Komedie
 Genres.CRIME = Misdaad
 Genres.DISASTER = Rampen
 Genres.DOCUMENTARY = Documentaire
