--- a/locale/messages_no.properties
+++ b/locale/messages_no.properties
@@ -11,6 +11,8 @@ Button.search=Søk
 Button.save=Lagre
 Button.scrape=Hent data
 Button.edit=Endre
+# Button.register=Register
+# Button.rename=Rename
 
 menuitem.cut=Klipp ut
 menuitem.copy=Kopier
@@ -34,7 +36,7 @@ tmm.clearurlcache=slett midlertidig url lager
 tmm.clearimagecache=slett midlertidig bildelager
 tmm.rebuildimagecache=gjenoppbygg midlertidig bildelager
 tmm.cleardatabase=Nullstill database
-tmm.cleardatabase.hint=Forsiktig\: dette vil fjerne nåværende database og opprette en ny (tom). Fortsette?
+# tmm.cleardatabase.hint=Be careful\: this will remove the complete tMM database to start with a new one. Proceed?
 tmm.cleardatabase.info=Database nullstilt. Start tinyMediaManager på nytt
 tmm.cleardatabase.error=En feil oppstod ved start av database. Slett filen tmm.odb manuelt
 tmm.gotoinstalldir=Åpne installasjons mappen for tMM
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Bilder
 tmm.trailer=Trailer
 tmm.subtitles=Undertekster
+tmm.update.title=Sjekk etter oppdateringer
+tmm.update.message=En ny oppdatering er funnet.\nVil du oppdatere?
+# tmm.registeredto=Registered to\:
+# tmm.registerdonator=Register for donator version
+# tmm.registerdonator.error=There was a problem registering your version
+# tmm.registerdonator.success=Thank you for registering to the donator version. Please restart tMM.
+# tmm.registerdonator.hint=Here you can register to the donator version. The donator version will have some special features as a "thank you" for our supporters. Please fill in the name and email address you used when donating.
+# tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
+# tmm.donatorfunction.hint=This feature is restricted to our donators.
 
 status.activethreads=aktive tråder
 status.queuesize=Kø\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Film titlene er for like - kan ikke velge hvilken som sk
 movie.scrape.toolowscore=Likehetsverdien var for lav (<0.75) så resultatet blir ikke brukt
 movie.remove=Fjern valgt(e) film(er)
 movie.rename=Omdøping/opprydding av valgt(e) film(er)
+# movie.renamepreview=Rename/cleanup selected movie(s) - dry run
+# movie.renamepreview.hint=Create a preview, which movies have to be renamed
+# movie.renamerpreview=Renamer preview
 movie.updatemediainfo=Oppdater media informasjon for valgt(e) film(er)
 movie.bulkedit=Bulk endring
 movie.bulkedit.desc=Endre sjanger-, etikett-, film-sett og sett flagg for alle valgte filmer.
 movie.rewritenfo=Omskriv NFO for valgt(e) film(er)
 movie.clearimagecache=Tøm midlertidig bildelager for valgt(e) film(er)
+# movie.findmissing.all=Find missing movies in all datasources
+# movie.findmissing=Find missing movies
 
 movie.export=Eksporter valgt(e) film(er)
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Flytt valgt skuespiller opp
 movie.edit.moveactordown=Flytt valgt skuespiller ned
 movie.edit.moveproducerup=Flytt valgt produsent opp
 movie.edit.moveproducerdown=Flytt valgt produsent ned
-
 
 movie.inmovieset=Filmer i ett film-sett
 movie.notinmovieset=Filmer som ikke er i ett film-sett
@@ -119,6 +134,11 @@ movieset.movie.remove=Fjern merket film fra film-sett
 movieset.movie.moveup=Flytt markert film opp
 movieset.movie.movedown=Flytt markert film ned
 movieset.save.desc=Lagre metadata for film-sett
+
+# renamer.oldfolder=Old folder name
+# renamer.newfolder=New folder name
+# renamer.oldfiles=Old file names
+# renamer.newfiles=New file names
 
 cast.actor.add=Legg til ny skuespiller
 cast.actor.remove=Fjern valgt skuespiller
@@ -197,12 +217,12 @@ Feedback.send.ok=Tilbakemelding sendt
 
 # settings menu (linebreaks with html)
 Settings.movies=Filmer
-Settings.scraper=<html><center>Filmer -<br>Datainnsamler</center></html>
-Settings.images=<html><center>Filmer -<br>Bilder</center></html>
+Settings.scraper=Datainnsamler
+Settings.images=Bilder
 Settings.tvshow=TV Serier
-Settings.tvshowscraper=<html><center>TV Serier -<br>Datainnsamler</center></html>
 Settings.general=Generelt
-Settings.externaldevices=<html>Eksterne<br>enheter</html>
+Settings.externaldevices=Eksterne enheter
+# Settings.filetypes=File types
 
 # general settings
 Settings.proxy=Proxy Innstillinger
@@ -221,7 +241,7 @@ Settings.languagehint=Språket vil endres ved omstart\!
 
 # image settings
 Settings.poster=Plakater og Illustrasjoner
-Settings.images=<html><center>Filmer -<br>Bilder</center></html>
+Settings.images=Bilder
 Settings.source=Kilde
 Settings.fanarttv.alert=Vær oppmerksom\: Fanart.tv har ikke plakat
 Settings.moviefilename=<filmens filnavn>
@@ -251,6 +271,7 @@ Settings.scraperTreshold=Terskelverdi
 Settings.scraperTreshold.hint=Terskelen er en verdi for likheten mellom søkestreng og søkeresultat. Den\nautomatiske datainnsamlingen vil ignorere søkeresultat der verdien havner\nunder terskelen.\n\nVÆR OPPMERKSOM\: Lavere terskel gir høyere risiko for innsamlingsfeil\!\n\n1,00 \= 100% likhet\n0,75 \= Standard\n0,00 \= Totalt ulik
 Settings.default.autoscrape=automatiske bildeinnsamling (uten valg)
 Settings.automaticscraper=Automatisk innsamler
+Settings.scraperfallback=Forsøke andre datainnsamlere hvis ingen resultat
 
 # movie settings
 Settings.movie.datasource=Datakilder
@@ -304,6 +325,7 @@ Settings.tvshowepisodetofilename=legg til episodens tittel i filnavnet
 Settings.tvshowseasonfoldername=sesong mappe navn
 Settings.tvshowseasonhint=$1 - Sesong nummer\n$2 - Sesong nummer med minst 2 siffer
 Settings.separator=Separator
+Settings.tvshow.certifactioncountry.hint=Hint\: ingen av datainnsamlerne støtter aldersgrense fra forskjellige land.\nTV Database vil alltid returnere aldersgrense fra US.\nAniDB støtter ikke aldersgrense.
 
 # tv shows
 tvshow.scrape.newitems=Datainnsamling for nye elementer
@@ -324,8 +346,8 @@ tvshow.rewritenfo=Omskriv NFO for valgt(e) TV serie(r)
 tvshow.rename=Omdøping/opprydding av valgt(e) TV serie(r)/episode(r)
 tvshow.clearimagecache=Tøm midlertidig bildelager for valgte TV serie(r)/episode(r)
 tvshow.renamer.failedrename=Omdøping av episode {} feilet - ugyldig sesong og/eller episode nummer
-# tvshow.renamer.tvshowfolder=Rename TV show folder
-# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.renamer.tvshowfolder=Gi nytt navn til TV serie mappen
+tvshow.renamer.tvshowfolder.year=Legg til år for TV serie mappen
 
 tvshowepisode.scrape=Hent metadata for episode
 tvshowepisode.clone=Kopier episode
@@ -354,6 +376,7 @@ metatag.episodes=Episoder
 metatag.external=eksternt
 metatag.filename=Filnavn
 metatag.files=Filer
+metatag.format=Format
 metatag.genre=Sjangre
 metatag.guests=Gjester
 metatag.images=Bilder
