--- a/locale/messages_pt.properties
+++ b/locale/messages_pt.properties
@@ -11,6 +11,8 @@ Button.search=Buscar
 Button.save=Salvar
 Button.scrape=Pesquisar
 Button.edit=Editar
+Button.register=Registrar
+Button.rename=Renomear
 
 menuitem.cut=Cortar
 menuitem.copy=Copiar
@@ -34,7 +36,7 @@ tmm.clearurlcache=limpar cache de url
 tmm.clearimagecache=limpar cache de imagem
 tmm.rebuildimagecache=reconstruir cache de imagem
 tmm.cleardatabase=Inicializar base de dados
-tmm.cleardatabase.hint=Cuidado\: isto irá remover a base de dados e iniciar uma nova. Prosseguir?
+tmm.cleardatabase.hint=Cuidado\: isto vai remover toda a base do TMM e começar com uma nova. Prosseguir?
 tmm.cleardatabase.info=Base de dados inicializada. Por favor reinicie o tinyMediaManager
 tmm.cleardatabase.error=Um erro ocorreu na inicialização da base de dados. Por favor apague o arquivo tmm.odb manualmente
 tmm.gotoinstalldir=Abrir diretório do tMM no gerenciador de arquivos
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Imagens
 tmm.trailer=Trailer
 tmm.subtitles=Legendas
+tmm.update.title=Checar atualizações
+tmm.update.message=Nova atualização encontrada.\nGostaria de instalar?
+tmm.registeredto=Registrado para\:
+tmm.registerdonator=Registrar para versão de doador
+tmm.registerdonator.error=Houve um problema registrando sua versã
+tmm.registerdonator.success=Obrigado por registrar para versão de doador. Por favor reinicie o TMM
+tmm.registerdonator.hint=Aqui você pode registrar para versão de doador. A versão de doador tem funções especiais como agradecimento aos apoiadores. Por favor, preencha seu nome e endereço utilizado na doação.
+tmm.registerdonator.thanks=Você já se registrou para versão de doador. Obrigado novamente pela doação\!
+tmm.donatorfunction.hint=Esta função é restrita a nossos doadores.
 
 status.activethreads=processos ativos
 status.queuesize=Fila\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Títulos muito similares - não consigo decidir qual usa
 movie.scrape.toolowscore=A pontuação foi muito baixa (<0.75) então não consideraremos este resultado
 movie.remove=Remover filme(s) selecionado(s)
 movie.rename=Renomear/limpar filme(s) selecionado(s)
+movie.renamepreview=Renomear/limpar filme(s) selecionado(s) - testar
+movie.renamepreview.hint=Criar prévia, quais filmes precisam ser renomeados
+movie.renamerpreview=Renomear prévia
 movie.updatemediainfo=Atualizar informação de mídia do(s) filme(s) selecionado(s)
 movie.bulkedit=Edição em lote
 movie.bulkedit.desc=Alterar gênero, etiquetas, coleção e indicador de assistido para os filmes selecionados
 movie.rewritenfo=Reescrever NFO p/ filme(s) selecionado(s)
 movie.clearimagecache=Limpar imagem de cache do(s) filme(s) selecionado(s)
+movie.findmissing.all=Buscar filmes não localizados em todas as origens
+movie.findmissing=Buscar filmes não localizados
 
 movie.export=Exportar filme(s) selecionado(s)
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Mover ator selecionado p/ cima
 movie.edit.moveactordown=Mover ator selecionado p/ baixo
 movie.edit.moveproducerup=Mover produtor selecionado p/ cima
 movie.edit.moveproducerdown=Mover produtor selecionado p/ baixo
-
 
 movie.inmovieset=Editar filme(s) em uma coleção
 movie.notinmovieset=Filmes individuais
@@ -119,6 +134,11 @@ movieset.movie.remove=Remover o filme marcado da coleção
 movieset.movie.moveup=Mover o filme marcado p/ cima
 movieset.movie.movedown=Mover o filme marcado p/ baixo
 movieset.save.desc=Salvar metadata da coleção
+
+renamer.oldfolder=Nome de diretório antigo
+renamer.newfolder=Novo nome de diretório
+renamer.oldfiles=Antigo nome de arquivo
+renamer.newfiles=Novo nome de arquivo
 
 cast.actor.add=Adicionar novo Ator
 cast.actor.remove=Remover ator selecionado
@@ -197,12 +217,12 @@ Feedback.send.ok=Informações enviadas
 
 # settings menu (linebreaks with html)
 Settings.movies=Filmes
-Settings.scraper=<html><center>Filmes -<br>Scraper</center></html>
-Settings.images=<html><center>Filmes -<br>Imagens</center></html>
-Settings.tvshow=Programa de Tv
-Settings.tvshowscraper=<html><center>Programas de Tv-<br>Scraper</center></html>
+Settings.scraper=Buscador
+Settings.images=Imagens
+Settings.tvshow=Programas de TV
 Settings.general=Geral
-Settings.externaldevices=<html>Dispositivos<br>externos</html>
+Settings.externaldevices=Dispositivos externos
+Settings.filetypes=Tipos de arquivo
 
 # general settings
 Settings.proxy=Configurações de Proxy
@@ -221,7 +241,7 @@ Settings.languagehint=O idioma será alterado após reiniciar\!
 
 # image settings
 Settings.poster=Pôster e Fanart
-Settings.images=<html><center>Filmes -<br>Imagens</center></html>
+Settings.images=Imagens
 Settings.source=Origem
 Settings.fanarttv.alert=Atenção\: Fanart.tv não fornece pôster
 Settings.moviefilename=<nomearquivo filme>
@@ -251,10 +271,11 @@ Settings.scraperTreshold=Indicador de nível
 Settings.scraperTreshold.hint=Este é um indicador de quanto similar a pesquisa e os resultados são.\nA busca automática vai ignorar resultados abaixo do nível indicado.\nATENÇÃO\: configurar o nível muito baixo irá resultar em falsos positivos\!\n\n1 \= 100% igual\n0.75 \= padrão\n0 \= completamente diferentes
 Settings.default.autoscrape=buscar imagens automaticamente (sem seleção)
 Settings.automaticscraper=Busca automática 
+Settings.scraperfallback=Reverter para outros buscadores quando não obtiver resultados
 
 # movie settings
 Settings.movie.datasource=Fontes
-Settings.movie.datasource.remove.info=Se você remover %s da sua origem de dados, todos os filmes neste caminho também serão removidos. Continuar?
+Settings.movie.datasource.remove.info=Se você remover %s da sua origem de dados, todos os filmes neste caminho serão removidos da base de dados do TMM. Continuar?
 Settings.movie.visiblecolumns=Colunas visíveis
 
 Settings.datasource.folderchooser=Adicionar fonte
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=A Fazer
 # tv show settings
 Settings.tvshowdatasource=Fonte de programa de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
-Settings.tvshowdatasource.remove.info=Se você remover %s da sua origem de dados, todos os Programas de TV e episódios neste caminho também serão removidos. Continuar?
+Settings.tvshowdatasource.remove.info=Se você remover %s da sua origem de dados, todos os Programas de TV e Séries neste caminho serão removidos da base de dados do TMM. Continuar?
 Settings.tvshowseasontofilename=adicionar temporada ao nome
 Settings.tvshowtofilename=adicionar Programa ao nome
 Settings.tvshowepisodetofilename=adicionar episódio ao nome
 Settings.tvshowseasonfoldername=nome diretório temporada
 Settings.tvshowseasonhint=$1 - Número da temporada\n$2 - Número da temporada com 2 dígitos
 Settings.separator=Separador
+Settings.tvshow.certifactioncountry.hint=Dica\: no momento nenhum dos pesquisadores suportam certificações de países diferentes.\nO TV Database  sempre vai retornar certificações US\nO AniDB não fornece certificações.
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
@@ -324,8 +346,8 @@ tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
 tvshow.clearimagecache=Limpar cache de imagem para o(s) Programa(s) de TV/Episódio(s) selecionado(s)
 tvshow.renamer.failedrename=Falha ao renomear episódio {} - número de temporada e/ou episódio inválido
-# tvshow.renamer.tvshowfolder=Rename TV show folder
-# tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
+tvshow.renamer.tvshowfolder=Renomear diretório Programas de TV
+tvshow.renamer.tvshowfolder.year=Adicionar ano ao Diretório dos Programas de TV
 
 tvshowepisode.scrape=Pesquisar dados do episódio
 tvshowepisode.clone=Duplicar episódio
@@ -354,6 +376,7 @@ metatag.episodes=Episódios
 metatag.external=externo
 metatag.filename=Nome Arquivo
 metatag.files=Arquivos
+metatag.format=Formato
 metatag.genre=Gêneros
 metatag.guests=Convidados
 metatag.images=Imagens
