--- a/locale/messages_ru.properties
+++ b/locale/messages_ru.properties
@@ -1,63 +1,63 @@
-Button.ok=Đồng ý
-Button.cancel=Hủy bỏ
-Button.add=Thêm
-Button.addfile=Thêm tập tin
-Button.remove=Loại bỏ
-Button.continue=Tiếp tục
-Button.abort=Bỏ qua
-Button.abortqueue=Bỏ qua hàng đợi
-Button.close=Đóng lại
-Button.search=Tìm kiếm
+# Button.ok=Ok
+# Button.cancel=Cancel
+Button.add=Добавить
+Button.addfile=Добавить файл
+Button.remove=Удалить
+Button.continue=Продолжить
+Button.abort=Отменить
+# Button.abortqueue=Abort queue
+Button.close=Закрыть
+Button.search=Поиск
 # Button.save=Save
 # Button.scrape=Scrape
 # Button.edit=Edit
 # Button.register=Register
 # Button.rename=Rename
 
-# menuitem.cut=Cut
-# menuitem.copy=Copy
-# menuitem.paste=Paste
+menuitem.cut=Вырезать
+menuitem.copy=Копировать
+menuitem.paste=Вставить
 
 # vertical tabs (singular / plural)
-tmm.movies=Phim
+tmm.movies=Фильмы
 # tmm.movie=Movie
-tmm.moviesets=Phim trường
+# tmm.moviesets=Movie sets
 # tmm.movieset=Movie set
 # tmm.tvshows=TV shows
 # tmm.tvshow=TV show
-tmm.settings=Thiết lập
+tmm.settings=Настройки
 
 # menu actions
-tmm.exit=Thoát
-tmm.exit.runningtasks=Bạn có chắc bạn muốn đóng lại chương trình?\nMột vài tiến trình hiện vẫn đang chạy...
-tmm.exit.confirmation=Thoát khỏi phần xác nhận
-# tmm.cache=Cache
+tmm.exit=Выход
+tmm.exit.runningtasks=Вы уверены, что хотите закрыть tinyMediaManager?\nНекоторые задачи до сих пор выполняются.
+# tmm.exit.confirmation=Exit Confirmation
+tmm.cache=Кэш
 # tmm.clearurlcache=clear url cache
 # tmm.clearimagecache=clear image cache
 # tmm.rebuildimagecache=rebuild image cache
-tmm.cleardatabase=thiết lập ban đầu dành cho cơ sở dữ liệu
+tmm.cleardatabase=Инициализация базы данных
 # tmm.cleardatabase.hint=Be careful\: this will remove the complete tMM database to start with a new one. Proceed?
-tmm.cleardatabase.info=Đã thiết lập cơ sở dữ liệu. Xin vui lòng khởi động lại chương trình
-tmm.cleardatabase.error=Xảy ra lỗi trên bộ phận cơ sở dữ liệu. Xin vui lòng chọn lựa tập tin tmm.odb
+tmm.cleardatabase.info=База данных инициализирована. Пожалуйста перезапустите tinyMediaManager
+tmm.cleardatabase.error=При инициализации базы данных произошла ошибка. Пожалуйста удалите файл tmm.odb вручную.
 # tmm.gotoinstalldir=Open tMM install directory in a file browser
-tmm.debug=Gỡ rối
+# tmm.debug=Debug
 # tmm.tools=Tools
-tmm.about=Dịch bởi PA
+tmm.about=О нас
 # tmm.contact=Contact us
-tmm.donate=Ủng hộ
-tmm.searchfield=Tìm kiếm...
+# tmm.donate=Donate
+tmm.searchfield=Поиск...
 # tmm.errorlogs=Show error log
 # tmm.wakeonlandevice=Wake on LAN device
 # tmm.wakeonlan=Wake on LAN
-# tmm.version=Version
-# tmm.builddate=Build date
-# tmm.homepage=Homepage
+tmm.version=Версия
+tmm.builddate=Дата сборки
+tmm.homepage=Домашняя страница
 # tmm.thanksto=Thanks to
 # tmm.of=of
 # tmm.nfo=NFO
-# tmm.images=Images
-# tmm.trailer=Trailer
-# tmm.subtitles=Subtitles
+tmm.images=Изображения
+tmm.trailer=Трейлер
+tmm.subtitles=Субтитры
 # tmm.update.title=check for update
 # tmm.update.message=A new update has been found.\nDo you want to update?
 # tmm.registeredto=Registered to\:
@@ -68,11 +68,11 @@ tmm.searchfield=Tìm kiếm...
 # tmm.registerdonator.thanks=You have already registered to the donator version. Thank you again for donating\!
 # tmm.donatorfunction.hint=This feature is restricted to our donators.
 
-status.activethreads=các tiến trình đang hoạt động
+status.activethreads=Активные задачи
 # status.queuesize=Queue\:
 
 # menu & popup on rightclick
-onlyoneoperation=Chỉ hiển thị một tiến trình vào cùng một thời điểm
+onlyoneoperation=Одновременно может выполнятся не больше одной задачи.
 # update.datasource=Update data sources
 # update.datasource.unavailable=Datasource {} not available - skipping
 # update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully\!)
@@ -83,8 +83,8 @@ onlyoneoperation=Chỉ hiển thị một tiến trình vào cùng một thời 
 
 # edit.discard=Discard changes
 
-movie.scrape.selected=Tìm kiếm & tải về (các) phim được chọn
-movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn - buộc phần khớp tốt nhất
+movie.scrape.selected=Найти и загрузить информацию по выбранным фильмам.
+# movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
 # movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
 # movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
 # movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
@@ -93,20 +93,20 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movie.scrape.nomatchfound=No suitable movie found during search
 # movie.scrape.toosimilar=Movie titles are too similar - can't decide which to use
 # movie.scrape.toolowscore=Matching score was too low (<0.75) so we are not taking this result
-# movie.remove=Remove selected movie(s)
+movie.remove=Удалить выбранные фильмы
 # movie.rename=Rename/cleanup selected movie(s)
 # movie.renamepreview=Rename/cleanup selected movie(s) - dry run
 # movie.renamepreview.hint=Create a preview, which movies have to be renamed
 # movie.renamerpreview=Renamer preview
-# movie.updatemediainfo=Update media information of selected movie(s)
+movie.updatemediainfo=Обновить информацию для выбранных фильмов.
 # movie.bulkedit=Bulk editing
-# movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
-# movie.rewritenfo=Rewrite NFO for selected movie(s)
+movie.bulkedit.desc=Изменить жанр, теги, коллекцию и статус просмотра для всех выбранных фильмов.
+movie.rewritenfo=Перезаписать NFO-файл для выбранных фильмов
 # movie.clearimagecache=Clear image cache for selected movie(s)
 # movie.findmissing.all=Find missing movies in all datasources
 # movie.findmissing=Find missing movies
 
-# movie.export=Export selected movie(s)
+movie.export=Экспорт выбранных фильмов
 
 # movie.edit=Edit movie
 # movie.edit.abortqueue.desc=Abort editing all selected movies
@@ -140,16 +140,16 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # renamer.oldfiles=Old file names
 # renamer.newfiles=New file names
 
-# cast.actor.add=Add a new Actor
+cast.actor.add=Добавить актёра
 # cast.actor.remove=Remove selected Actor
-# cast.actor.unknown=unknown actor
-# cast.role.unknown=unknown role
+cast.actor.unknown=Неизвестный актёр.
+cast.role.unknown=Неизвестная роль.
 # cast.producer.add=Add a new Producer
 # cast.producer.remove=Remove selected Producer
 # producer.name.unknown=unknown producer
 # producer.role.unknown=unknown role
 
-# scraper=Scraper
+scraper=Загрузить информацию
 # scraper.metadata.select=Select metadata to be scraped
 # scraper.metadata.defaults=Metadata scrape defaults
 # scraper.start=Start scraping
@@ -176,18 +176,18 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # image.poster.naming=Poster file naming
 # image.fanart.size=Fanart size
 # image.fanart.naming=Fanart file naming
-# image.notfound.fanart=No fanart found
-# image.notfound.poster=No poster found
-# image.notfound.banner=No banner found
-# image.notfound.thumb=No thumb found
+image.notfound.fanart=Фанарт не найден
+image.notfound.poster=Постер не найден
+image.notfound.banner=Баннер не найден
+image.notfound.thumb=Превью не найдено
 
-# genre.add=Add genre
-# genre.remove=Remove genre
+genre.add=Добавить жанр
+genre.remove=Удалить жанр
 
-# trailer.add=Add trailer
-# trailer.remove=Remove selected trailer
+trailer.add=Добавить трейлер
+trailer.remove=Удалить выбранный трейлер
 
-# tag.add=Add tag
+tag.add=Добавить тег
 # tag.remove=Remove selected tag
 
 # sort.ascending=Ascending
@@ -196,8 +196,8 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tmdb.wrongformat=wrong format\: TMDB Id
 
 # BugReport=Report a bug
-# BugReport.name=Name
-# BugReport.email=Email
+BugReport.name=Имя
+BugReport.email=Email
 # BugReport.email.description=Please enter a valid email. We may need to contact you to get more information
 # BugReport.description=Description
 # BugReport.description.empty=No description provided
@@ -231,12 +231,12 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.proxyuser=Username
 # Settings.proxypass=Password
 # Settings.clearhttpcache=Clear HTTP cache on shutdown
-# Settings.cache=Cache
+Settings.cache=Кэш
 # Settings.imagecache=Enable image cache
 # Settings.imagecachetype=Image cache type
 # Settings.imagecachebackground=Automatically build image cache in background
 # Settings.loglevel=Loglevel
-# Settings.language=UI Language
+Settings.language=Язык интерфейса
 # Settings.languagehint=The language will be changed after restart\!
 
 # image settings
@@ -294,15 +294,15 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # Settings.renamer.folder=Folder name
 # Settings.renamer.file=File name
 # Settings.renamer.asciireplacement=Replace non ASCII characters with their basic ASCII equivalents
-# Settings.renamer.asciireplacement.hint=Examples\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
+Settings.renamer.asciireplacement.hint=Пример\: Ä \=> Ae; Ö \=> Oe; ß \=> ss; Á \= > A; Æ \=> Ae; ...
 # Settings.cleanupoptions=Cleanup options
 # Settings.renamer.removenfo=remove all other NFOs
 # Settings.renamer.moviesetsinglemovie=Also create movieset folder for moviesets with only one movie
 # Settings.example=Example
 # Settings.imagecacheimport=Build image cache on import
 # Settings.imagecacheimporthint=Attention\: this may take a while. Works only if the image cache is enabled
-# Settings.devicename=Device name
-# Settings.macaddress=MAC address
+Settings.devicename=Имя устройства
+Settings.macaddress=MAC-адрес
 # Settings.movie.badwords=Bad words
 # Settings.movie.badwords.hint=Bad words, which will be removed from\r\nthe detected movie name
 # Settings.runtimefrommediafile=Prefer runtime from MediaInfo
@@ -341,30 +341,30 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tvshow.bulkedit=Bulk editing
 # tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
-# tvshow.update=Update selected TV show(s)
-# tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
+tvshow.update=Обновить выбранные сериалы
+tvshow.rewritenfo=Перезаписать NFO-файл для выбранных сериалов
 # tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
-# tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
+tvshow.clearimagecache=Очистить кэш изображений для выбранных Сериалов/серий
 # tvshow.renamer.failedrename=Failed to rename episode {} - invalid season and/or episode number
 # tvshow.renamer.tvshowfolder=Rename TV show folder
 # tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 
 # tvshowepisode.scrape=Scrape episode metadata
 # tvshowepisode.clone=Clone episode
-# tvshowepisode.remove=Remove episode
-# tvshowepisode.rewritenfo=Rewrite NFO for selected episode(s)
+tvshowepisode.remove=Удалить эпизод
+tvshowepisode.rewritenfo=Перезаписать NFO-файл для выбранных серий
 # tvshowepisode.choose=Choose an episode
 
 # metatags
 # metatag.actors=Actors
 # metatag.aired=Aired
 # metatag.artwork=Artwork
-# metatag.audio=Audio
-# metatag.audiocodec=Audio codec
+metatag.audio=Аудио
+metatag.audiocodec=Аудиокодек
 # metatag.cast=Cast
 # metatag.certification=Certification
-# metatag.codec=Codec
-# metatag.country=Country
+metatag.codec=Кодек
+metatag.country=Страна
 # metatag.crew=Crew
 # metatag.datasource=Datasource
 # metatag.dateadded=Date Added
@@ -372,19 +372,19 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.details2=Details 2
 # metatag.director=Director
 # metatag.episode=Episode
-# metatag.episodes=Episodes
+metatag.episodes=Серии
 # metatag.external=external
 # metatag.filename=Filename
 # metatag.files=Files
 # metatag.format=Format
 # metatag.genre=Genres
-# metatag.guests=Guests
+metatag.guests=Гости
 # metatag.images=Images
 # metatag.imdb=IMDB Id
 # metatag.internal=internal
-# metatag.mediafiletype=Type
+metatag.mediafiletype=Тип
 # metatag.minutes=min
-# metatag.movie=Movie
+metatag.movie=Фильм
 # metatag.movieset=Movieset
 # metatag.name=Name
 # metatag.nfo=NFO
@@ -393,24 +393,24 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.path=Path
 # metatag.plot=Plot
 # metatag.production=Production
-# metatag.producers=Producers
+metatag.producers=Продюсер
 # metatag.premiered=Premiered
 # metatag.quality=Quality
 # metatag.rating=Rating
-# metatag.releasedate=Release date
+metatag.releasedate=Дата выхода
 # metatag.resolution=Resolution
 # metatag.role=Role
 # metatag.runtime=Runtime
 # metatag.season=Season
-# metatag.seasons=Seasons
+metatag.seasons=Сезон
 # metatag.size=Size
 # metatag.sorttitle=Sorttitle
 # metatag.source=Source
 # metatag.spokenlanguages=Spoken languages
 # metatag.status=Status
-# metatag.stream=Stream
+metatag.stream=Поток
 # metatag.studio=Studio
-# metatag.subtitle=Subtitle
+metatag.subtitle=Субтитры
 # metatag.subtitles=Subtitles
 # metatag.tagline=Tagline
 # metatag.tags=Tags
@@ -418,34 +418,34 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # metatag.tmdb=TMDB Id
 # metatag.top250=Top 250
 # metatag.tvdb=TheTvDB Id
-# metatag.tvshow=TV show
-# metatag.tvshows=TV shows
+metatag.tvshow=Сериал
+metatag.tvshows=Сериалы
 # metatag.trailer=Trailer
 # metatag.url=Url
-# metatag.video=Video
-# metatag.videocodec=Video codec
+metatag.video=Видео
+metatag.videocodec=Видеокодек
 # metatag.watched=Watched
 # metatag.writer=Writer
 # metatag.year=Year
 # metatag.mediainformation=Media Information
-# metatag.mediafiles=Media files
+metatag.mediafiles=Медиафайлы
 # metatag.trailer=Trailer
 
-# mediafiletype.unknown=Unknown
-# mediafiletype.video=Video
+mediafiletype.unknown=Неизвестно
+mediafiletype.video=Видео
 # mediafiletype.video_extra=Video Extras
-# mediafiletype.audio=Audio
-# mediafiletype.subtitle=Subtitle
-# mediafiletype.nfo=NFO
-# mediafiletype.poster=Poster
-# mediafiletype.fanart=Fanart
-# mediafiletype.banner=Banner
-# mediafiletype.thumb=Thumb
-# mediafiletype.trailer=Trailer
+mediafiletype.audio=Аудио
+mediafiletype.subtitle=Субтитры
+mediafiletype.nfo=NFO-файл
+mediafiletype.poster=Постер
+mediafiletype.fanart=Фанарт
+mediafiletype.banner=Баннер
+mediafiletype.thumb=Превью
+mediafiletype.trailer=Трейлер
 # mediafiletype.extrafanart=Extrafanart
 # mediafiletype.graphic=Graphic
-# mediafiletype.movie=Movie
-# mediafiletype.episode=Episode
+mediafiletype.movie=Фильм
+mediafiletype.episode=Серия
 # mediafiletype.season_poster=Season poster
 # mediafiletype.sample=Sample
 
@@ -459,7 +459,7 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # tvshowchooser.search=Search TV show
 # tvshowepisodechooser.search=Search episode
 
-# movieextendedsearch.filter=Filter
+movieextendedsearch.filter=Фильтр
 # movieextendedsearch.options=Extended filter and sort options
 # movieextendedsearch.filterby=filter by
 # movieextendedsearch.duplicates=Show duplicates
@@ -472,11 +472,11 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # movieextendedsearch.missingmetadata=Missing metadata
 # movieextendedsearch.missingartwork=Missing artwork
 # movieextendedsearch.missingsubtitles=Missing subtitles
-# movieextendedsearch.newmovies=New movies
-# movieextendedsearch.newepisodes=New episodes
+movieextendedsearch.newmovies=Новый фильм
+movieextendedsearch.newepisodes=Новые серии
 
 # logwindow.title=Error logs
-# summarywindow.title=Summary
+summarywindow.title=Всего
 # whatsnew.title=What's new
 # whatsnew.hint=For more information visit
 
@@ -517,54 +517,54 @@ movie.scrape.selected.force=Tìm kiếm & tải về (các) phim được chọn
 # message.missingitems=Please fill out all required fields
 # message.invalidmac=Invalid MAC address. It has to be in the following format\: AA\:BB\:CC\:DD\:EE\:FF
 
-# tree.collapseall=Collapse all nodes
-# tree.expandall=Expand all nodes
+tree.collapseall=Свернуть всё
+tree.expandall=Развернуть всё
 
 ########################
 # All our genres
 # these keys are not used (just here for translation)
 # if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
 # (since we might need to parse all languages, not just ours)
-# Genres.ACTION = Action
-# Genres.ADVENTURE = Adventure
-# Genres.ANIMATION = Animation
+Genres.ACTION = Экшен
+Genres.ADVENTURE = Приключения
+Genres.ANIMATION = Анимация
 # Genres.ANIMAL = Animal
-# Genres.BIOGRAPHY = Biography
-# Genres.COMEDY = Comedy
-# Genres.CRIME = Crime
-# Genres.DISASTER = Disaster
-# Genres.DOCUMENTARY = Documentary
-# Genres.DRAMA = Drama
+Genres.BIOGRAPHY = Биография
+Genres.COMEDY = Комедия
+Genres.CRIME = Криминал
+Genres.DISASTER = Катастрофа
+Genres.DOCUMENTARY = Документальный
+Genres.DRAMA = Драма
 # Genres.EASTERN = Eastern
-# Genres.EROTIC = Erotic
+Genres.EROTIC = Эротика
 # Genres.FAMILY = Family
 # Genres.FAN_FILM = Fan Film
-# Genres.FANTASY = Fantasy
+Genres.FANTASY = Фэнтези
 # Genres.FILM_NOIR = Film Noir
 # Genres.FOREIGN = Foreign
 # Genres.GAME_SHOW = Game Show
-# Genres.HISTORY = History
+Genres.HISTORY = История
 # Genres.HOLIDAY = Holiday
-# Genres.HORROR = Horror
+Genres.HORROR = Ужасы
 # Genres.INDIE = Indie
-# Genres.MUSIC = Music
-# Genres.MUSICAL = Musical
-# Genres.MYSTERY = Mystery
+Genres.MUSIC = Музыка
+Genres.MUSICAL = Музыкальный
+Genres.MYSTERY = Мистика
 # Genres.NEO_NOIR = Neo Noir
-# Genres.NEWS = News
-# Genres.REALITY_TV = Reality TV
+Genres.NEWS = Новости
+Genres.REALITY_TV = Реалити-шоу
 # Genres.ROAD_MOVIE = Road Movie
-# Genres.ROMANCE = Romance
-# Genres.SCIENCE_FICTION = Science Fiction
-# Genres.SERIES = Series
+Genres.ROMANCE = Романтика
+Genres.SCIENCE_FICTION = Научная фантастика
+Genres.SERIES = Сериал
 # Genres.SHORT = Short
 # Genres.SILENT_MOVIE = Silent Movie
-# Genres.SPORT = Sport
+Genres.SPORT = Спорт
 # Genres.SPORTING_EVENT = Sports Event
 # Genres.SPORTS_FILM = Sports Film
 # Genres.SUSPENSE = Suspense
 # Genres.TALK_SHOW = Talk Show
 # Genres.TV_MOVIE = TV Movie
-# Genres.THRILLER = Thriller
-# Genres.WAR = War
-# Genres.WESTERN = Western
+Genres.THRILLER = Триллер
+Genres.WAR = Война
+Genres.WESTERN = Вестерн
