--- a/locale/messages_sk.properties
+++ b/locale/messages_sk.properties
@@ -11,6 +11,8 @@ Button.search=Vyhľadať
 Button.save=Uložiť
 Button.scrape=Stiahni
 Button.edit=Upraviť
+Button.register=Registrovať
+Button.rename=Premenovať
 
 menuitem.cut=Vystrihnúť
 menuitem.copy=Kopírovať
@@ -34,7 +36,7 @@ tmm.clearurlcache=vyčistiť vyrovnávaciu pamäť url
 tmm.clearimagecache=vyčistiť vyrovnávaciu pamäť obrázkov
 tmm.rebuildimagecache=Obnoviť vyrovnávaciu pamäť obrázkov
 tmm.cleardatabase=Inicializácia databázy
-tmm.cleardatabase.hint=Upozornenie\: týmto odstránite celú databázu a začne novú. Chcete Pokračovať?
+tmm.cleardatabase.hint=Upozornenie\: týmto odstránite celú databázu tMM a začne novú. Chcete Pokračovať?
 tmm.cleardatabase.info=Databáza inicializovaná. Prosím reštartujte tinyMediaManager
 tmm.cleardatabase.error=Pri inicializácii databázy došlo k chybe. Prosím vymažte súbor tmm.odb ručne.
 tmm.gotoinstalldir=Otvoriť inštalačný adresár tMM v prehliadaši súborov
@@ -56,6 +58,15 @@ tmm.nfo=NFO
 tmm.images=Obrázky
 tmm.trailer=Trailer
 tmm.subtitles=Titulky
+tmm.update.title=skontrolovať aktualizácie
+tmm.update.message=Bola nájdená aktualizácia.\nChcete aktualizovať?
+tmm.registeredto=Registrované na\:
+tmm.registerdonator=Registrovať darcovskú verziu
+tmm.registerdonator.error=Nastal problém pri registrácii Vašej verzie
+tmm.registerdonator.success=Ďakujeme za registráciu pre darcovskú verziu. Prosím reštartujte tMM.
+tmm.registerdonator.hint=Tu si môžte zaregistrovať darcovskú verziu. Darcovská verzia bude mať špeciálne funkcie na vyjadrenie nášho "ďakujeme" naším podporovateľom. Prosím vyplňte meno a email, ktorý ste použili keď ste prispievali.
+tmm.registerdonator.thanks=Už ste sa registrovali na darcovskú verziu. Znova ďakujeme za príspevok\!
+tmm.donatorfunction.hint=Táto funkcia je vyhradená pre našich darcov.
 
 status.activethreads=aktívne vlákna
 status.queuesize=Front\:
@@ -84,11 +95,16 @@ movie.scrape.toosimilar=Názvy filmov sú príliš podobné - nemožno rozhodnú
 movie.scrape.toolowscore=Zhoda bola príliš nízka (<0.75) preto neberieme tento výsledok
 movie.remove=Odstrániť označené filmy
 movie.rename=Premenovať/vyčistiť označené filmy
+movie.renamepreview=Premenovať/vyčistiť označené filmy - dry run test
+movie.renamepreview.hint=Vytvorí náhľad filmov, ktoré majú byť premenované
+movie.renamerpreview=Náhľad premenovania
 movie.updatemediainfo=Aktualizovať informácie o médiu označených filmov
 movie.bulkedit=Hromadná úprava
 movie.bulkedit.desc=Zmeniť žánre, značky, kolekcie a označenie 'Videné' pre všetky označené filmy
 movie.rewritenfo=Prepísať NFO označených filmov
 movie.clearimagecache=Vyčistiť medzi-pamäť obrázkov pre označené filmy
+movie.findmissing.all=Nájsť chýbajúce filmy vo všetkých zdrojoch dát
+movie.findmissing=Nájsť chýbajúce filmy
 
 movie.export=Exportovať označené filmy
 
@@ -98,7 +114,6 @@ movie.edit.moveactorup=Presunúť označeného herca vyššie
 movie.edit.moveactordown=Presunúť označeného herca nižšie
 movie.edit.moveproducerup=Presunúť označeného producenta vyššie
 movie.edit.moveproducerdown=Presunúť označeného herca nižšie
-
 
 movie.inmovieset=Filmy v kolekcii
 movie.notinmovieset=Filmy, ktoré nie sú v kolekcii
@@ -120,6 +135,11 @@ movieset.movie.moveup=Premiestniť označený film hore
 movieset.movie.movedown=Premiestniť označený film dole
 movieset.save.desc=Uložiť metadáta kolekcie
 
+renamer.oldfolder=Starý názov priečinku
+renamer.newfolder=Nový názov priečinku
+renamer.oldfiles=Staré názvy súborov
+renamer.newfiles=Nové názvy súborov
+
 cast.actor.add=Pridať herca
 cast.actor.remove=Odstrániť označeného herca
 cast.actor.unknown=neznámy herec
@@ -129,13 +149,13 @@ cast.producer.remove=Odstrániť označeného producenta
 producer.name.unknown=neznámy producent
 producer.role.unknown=neznáma úloha
 
-scraper=Sťahovač
+scraper=Scraper
 scraper.metadata.select=Vyberte metadáta na stiahnutie
 scraper.metadata.defaults=Predvolené metadáta na stiahnutie
 scraper.start=Spustenie sťahovania informácii
-scraper.metadata=Sťahovač metadát
-scraper.artwork=Sťahovač artworku
-scraper.trailer=Sťahovač ukážky
+scraper.metadata=Scraper metadát
+scraper.artwork=Scraper artworku
+scraper.trailer=Scraper ukážky
 
 image.choose=Vyberte obrázok
 image.choose.file=Vyberte súbor
@@ -197,12 +217,12 @@ Feedback.send.ok=Spätná väzba odoslaná
 
 # settings menu (linebreaks with html)
 Settings.movies=Filmy
-Settings.scraper=<html><center>Filmy -<br>Scraper</center></html>
-Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
+Settings.scraper=Scraper
+Settings.images=Obrázky
 Settings.tvshow=Seriály
-Settings.tvshowscraper=<html><center>Seriály -<br>Scraper</center></html>
 Settings.general=Všeobecné
-Settings.externaldevices=<html>Externé<br>zariadenia</html>
+Settings.externaldevices=Externé zariadenia
+Settings.filetypes=Typy súborov
 
 # general settings
 Settings.proxy=Nastavenia proxy
@@ -221,7 +241,7 @@ Settings.languagehint=Jazyk sa zmení po reštarte\!
 
 # image settings
 Settings.poster=Plagát a FanArt
-Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
+Settings.images=Obrázky
 Settings.source=Zdroj
 Settings.fanarttv.alert=Výstraha\: Fanart.tv neposkytuje plagát
 Settings.moviefilename=<názov filmu>
@@ -248,13 +268,14 @@ Settings.getfromTMDB=Obsah/Názov/Stručné info z TMDB
 Settings.preferredLanguage=Preferovaný jazyk
 Settings.certificationCountry=Krajina pre certifikáciu
 Settings.scraperTreshold=Hranica zhody pre vyhľadávanie
-Settings.scraperTreshold.hint=Toto je ukazovateľ zhody vyhľadávaného dotazu s nájdenými výsledkami. \nAutomatický sťahovač bude ignorovať výsledky vyhľadávania pod hranicou.\nPOZOR\: Nastavenie hranice príliš nízko bude mať za následok chybné výsledky\! \n\n1 \= 100% rovnaké \n0,75 \= predvolená\n0 \= úplne odlišné
+Settings.scraperTreshold.hint=Toto je ukazovateľ zhody vyhľadávaného dotazu s nájdenými výsledkami. \nAutomatický scraper bude ignorovať výsledky vyhľadávania pod hranicou.\nPOZOR\: Nastavenie hranice príliš nízko bude mať za následok chybné výsledky\! \n\n1 \= 100% rovnaké \n0,75 \= predvolené\n0 \= úplne odlišné
 Settings.default.autoscrape=automaticky sťahovať obrázky (bez výberu)
-Settings.automaticscraper=Automatický sťahovač
+Settings.automaticscraper=Automatický scraper
+Settings.scraperfallback=Ak nie sú žiadne výsledky pre vyhľadávanie, použiť ostatné scrapery
 
 # movie settings
 Settings.movie.datasource=Zdroje dát
-Settings.movie.datasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky filmy v tomto umiestnení budú odstránené z databázy. Chcete pokračovať?
+Settings.movie.datasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky filmy v tomto umiestnení budú odstránené z databázy TMM. Chcete pokračovať?
 Settings.movie.visiblecolumns=Zobrazené položky
 
 Settings.datasource.folderchooser=Pridať zdroj dát
@@ -297,13 +318,14 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=Zdroje dát seriálov
 Settings.tvshowdatasource.folderchooser=Pridať zdroj dát seriálov
-Settings.tvshowdatasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky seriály a epizódy v tomto umiestnení budú odstránené z databázy. Chcete pokračovať?
+Settings.tvshowdatasource.remove.info=Pokiaľ odstránite %s z vašich zdrojov dát, všetky seriály a epizódy v tomto umiestnení budú odstránené z databázy TMM. Chcete pokračovať?
 Settings.tvshowseasontofilename=Pridať sezónu do názvu súboru
 Settings.tvshowtofilename=Pridať názov seriálu do názvu súboru
 Settings.tvshowepisodetofilename=Pridať názov epizódy do názvu súboru
 Settings.tvshowseasonfoldername=Názov priečinku sezóny
 Settings.tvshowseasonhint=$1 - Číslo sezóny\n$2 - Číslo sezóny s aspoň dvoma číslicami
 Settings.separator=Oddeľovač
+Settings.tvshow.certifactioncountry.hint=Tip\: aktuálne žiaden scraper nepodporuje certifikát z rôznych krajín.\nTheTVDB databáza vždy použije certifikát US\nAniDB neposkytuje certifikát
 
 # tv shows
 tvshow.scrape.newitems=Stiahni informácie nových položiek
@@ -354,6 +376,7 @@ metatag.episodes=Epizódy
 metatag.external=externé
 metatag.filename=Názov súboru
 metatag.files=Súbory
+metatag.format=Formát
 metatag.genre=Žánre
 metatag.guests=Hrajú
 metatag.images=Obrázky
